--- a/Panchayatana/devi-Panchayatana(Kannada).html
+++ b/Panchayatana/devi-Panchayatana(Kannada).html
@@ -8,7 +8,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention
-{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}<br> [Last updated on: 23-Oct-2024]</h6>
+{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}<br> [Last updated on: 29-Oct-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -69,7 +69,7 @@
 <tr><td class='simpleText'>ಕಲಶಂ ಗಂಧಾಕ್ಷತ ಪತ್ರ ಪುಷ್ಪೈರಭ್ಯರ್ಚ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಗಂಧ॑ದ್ವಾ॒ರಾಂ</span><span class='red'>ದು॑ರಾಧ॒ರ್ಷಾಂ¦</span><span class='black'>ನಿ॒ತ್ಯಪು॑ಷ್ಟಾಂ</span><span class='red'>ಕರೀ॒ಷಿಣೀಂ᳚</span> |<p>
-<span class='black'>ಈ॒ಶ್ವ॒ರೀಂ॒</span><span class='red'>ಸರ್‍ವ॑ಭೂತಾನಾಂ॒¦</span><span class='black'>ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒</span><span class='red'>ಶ್ರಿಯಂ᳚</span> ||೯|| 
+<span class='black'>ಈ॒ಶ್ವರೀಂ᳚</span><span class='red'>ಸರ್‍ವ॑ಭೂತಾ॒ನಾಂ¦</span><span class='black'>ತಾಮಿ॒ಹೋಪ॑</span><span class='red'>ಹ್ವಯೇ॒</span><span class='black'>ಶ್ರಿಯಂ᳚</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಗಂಧಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
@@ -161,8 +161,8 @@
 <tr><td class='simpleText'>********************************************************************</td></tr>
 <tr><td class='simpleText'>೧೭. ಆವಾಹನಂ</td></tr>
 <tr>
-<td class='VargaColorType1'><span class='black'>ಹಿರ᳚ಣ್ಯವರ್ಣಾಂ॒¦</span><span class='red'>ಹರಿ॑ಣೀಂ</span><span class='black'>ಸು॒ವರ್ಣ॑ರಜ॒ತಸ್ರ॑ಜಾಂ</span> |<p>
-<span class='black'>ಚಂ॒ದ್ರಾಂ</span><span class='red'>ಹಿ॒ರಣ್ಮ॑ಯೀಂ</span><span class='black'>ಲ॒ಕ್ಷ್ಮೀಂ¦</span><span class='red'>ಜಾತ॑ವೇದೋ</span><span class='black'>ಮ॒</span><span class='red'>ಆವ॑ಹ</span> ||೧|| 
+<td class='VargaColorType1'><span class='black'>ಹಿರ᳚ಣ್ಯವರ್ಣಾಂ॒</span><span class='red'>ಹರಿ॑ಣೀಂ¦</span><span class='black'>ಸು॒ವರ್ಣ॑ರಜ॒ತಸ್ರ॑ಜಾಂ</span> |<p>
+<span class='black'>ಚಂ॒ದ್ರಾಂ</span><span class='red'>ಹಿ॒ರಣ್ಮ॑ಯೀಂ</span><span class='black'>ಲ॒ಕ್ಷ್ಮೀಂ¦</span><span class='red'>ಜಾತ॑ವೇದೋ</span><span class='black'>ಮ॒</span><span class='red'>ಆವ॑ಹ</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ದೇವ್ಯಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ಆವಾಹಯಮಿ | ಇತ್ಯಾವಾಹ್ಯ ||</td></tr>
@@ -170,7 +170,7 @@
 <tr><td class='simpleText'>೧೮. ಆಸನಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ತಾಂ</span><span class='red'>ಮ॒</span><span class='black'>ಆ</span><span class='red'>ವ॑ಹ॒</span><span class='black'>ಜಾತವೇದೋ¦</span><span class='red'>ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀಂ᳚</span> |<p>
-<span class='black'>ಯಸ್ಯಾಂ॒</span><span class='red'>ಹಿರ᳚ಣ್ಯಂ</span><span class='black'>ವಿಂ॒ದೇಯಂ॒¦</span><span class='red'>ಗಾಮಶ್ವಂ॒</span><span class='black'>ಪುರು॑ಷಾನ॒ಹಂ</span> ||೨|| 
+<span class='black'>ಯಸ್ಯಾಂ॒</span><span class='red'>ಹಿರ᳚ಣ್ಯಂ</span><span class='black'>ವಿಂ॒ದೇಯಂ॒¦</span><span class='red'>ಗಾಮಶ್ವಂ॒</span><span class='black'>ಪುರು॑ಷಾನ॒ಹಂ</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ದೇವ್ಯಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ಆಸನಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
@@ -178,15 +178,15 @@
 <tr><td class='simpleText'>೧೯. ಪಾದ್ಯಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಅ॒ಶ್ವ॒ಪೂ॒ರ್‍ವಾಂ</span><span class='red'>ರ॑ಥಮ॒ಧ್ಯಾಂ¦</span><span class='black'>ಹ॒ಸ್ತಿನಾ᳚ದ</span><span class='red'>ಪ್ರ॒ಬೋಧಿ॑ನೀಂ</span> |<p>
-<span class='black'>ಶ್ರಿಯಂ᳚</span><span class='red'>ದೇ॒ವೀಮುಪ॑</span><span class='black'>ಹ್ವಯೇ॒¦</span><span class='red'>ಶ್ರೀರ್ಮಾ᳚</span><span class='black'>ದೇ॒ವೀ</span><span class='red'>ಜು॑ಷತಾಂ</span> ||೩|| 
+<span class='black'>ಶ್ರಿಯಂ᳚</span><span class='red'>ದೇ॒ವೀಮುಪ॑</span><span class='black'>ಹ್ವಯೇ॒¦</span><span class='red'>ಶ್ರೀರ್ಮಾ᳚</span><span class='black'>ದೇ॒ವೀ</span><span class='red'>ಜು॑ಷತಾಂ</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ದೇವ್ಯಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ಪಾದಾರವಿಂದಯೋಃ ಪಾದ್ಯಂ ಪಾದ್ಯಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
 <tr><td class='simpleText'>********************************************************************</td></tr>
 <tr><td class='simpleText'>೨೦. ಅರ್ಘ್ಯಂ</td></tr>
 <tr>
-<td class='VargaColorType1'><span class='black'>ಕಾಂ॒</span><span class='red'>ಸೋ॒ಸ್ಮಿ॒ತಾಂ</span><span class='black'>ಹಿರ᳚ಣ್ಯಪ್ರಾ॒ಕಾರಾ᳚¦ಮಾ॒ರ್ದ್ರಾಂ</span><span class='red'>ಜ್ವಲಂ᳚ತೀಂ</span><span class='black'>ತೃ॒ಪ್ತಾಂ</span><span class='red'>ತ॒ರ್ಪಯಂ᳚ತೀಂ</span> |<p>
-<span class='black'>ಪ॒ದ್ಮೇ॒</span><span class='red'>ಸ್ಥಿ॒ತಾಂ</span><span class='black'>ಪ॒ದ್ಮವ᳚ರ್ಣಾಂ॒¦</span><span class='red'>ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒</span><span class='black'>ಶ್ರಿಯಂ᳚</span> ||೪|| 
+<td class='VargaColorType1'><span class='black'>ಕಾಂ॒</span><span class='red'>ಸೋ॒ಸ್ಮಿ॒ತಾಂ</span><span class='black'>ಹಿರ᳚ಣ್ಯಪ್ರಾ॒ಕಾರಾ᳚</span><span class='red'>ಮಾ॒ರ್ದ್ರಾಂ¦</span><span class='black'>ಜ್ವಲಂ᳚ತೀಂ</span><span class='red'>ತೃ॒ಪ್ತಾಂ</span><span class='black'>ತ॒ರ್ಪಯಂ᳚ತೀಂ</span> |<p>
+<span class='black'>ಪ॒ದ್ಮೇ॒</span><span class='red'>ಸ್ಥಿ॒ತಾಂ</span><span class='black'>ಪ॒ದ್ಮವ᳚ರ್ಣಾಂ॒¦</span><span class='red'>ತಾಮಿ॒ಹೋಪ॑</span><span class='black'>ಹ್ವಯೇ॒</span><span class='red'>ಶ್ರಿಯಂ᳚</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ದೇವ್ಯಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ಹಸ್ತಯೋಃ ಅರ್ಘ್ಯಂ ಅರ್ಘ್ಯಂ ಸಮರ್ಪಯಾಮಿ</td></tr>
@@ -194,7 +194,7 @@
 <tr><td class='simpleText'>೨೧. ಆಚಮನಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಚಂ॒ದ್ರಾಂ</span><span class='red'>ಪ್ರ॑ಭಾ॒ಸಾಂ</span><span class='black'>ಯ॒ಶಸಾ॒</span><span class='red'>ಜ್ವಲಂ᳚ತೀಂ॒¦</span><span class='black'>ಶ್ರಿಯಂ᳚</span><span class='red'>ಲೋ॒ಕೇ</span><span class='black'>ದೇ॒ವಜು॑ಷ್ಟಾಮುದಾ॒ರಾಂ</span> |<p>
-<span class='black'>ತಾಂ</span><span class='red'>ಪ॒ದ್ಮಿನೀ᳚ಮೀಂ॒</span><span class='black'>ಶರ॑ಣಮ॒ಹಂ</span><span class='red'>ಪ್ರ</span><span class='black'>ಪ॑ದ್ಯೇ¦ಽಲ॒ಕ್ಷ್ಮೀರ್ಮೇ᳚</span><span class='red'>ನಶ್ಯತಾಂ॒</span><span class='black'>ತ್ವಾಂ</span><span class='red'>ವೃ॑ಣೇ</span><span class='black'>[ವ:೧]</span> ||೫|| 
+<span class='black'>ತಾಂ</span><span class='red'>ಪ॒ದ್ಮಿನೀ᳚ಮೀಂ॒</span><span class='black'>ಶರ॑ಣಮ॒ಹಂ</span><span class='red'>ಪ್ರ</span><span class='black'>ಪ॑ದ್ಯೇ¦ಽಲ॒ಕ್ಷ್ಮೀರ್ಮೇ᳚</span><span class='red'>ನಶ್ಯತಾಂ॒</span><span class='black'>ತ್ವಾಂ</span><span class='red'>ವೃ॑ಣೇ</span><span class='black'>[ವ:೧]</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ದೇವ್ಯಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ಮುಖೇ ಆಚಮನೀಯಂ ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
@@ -294,8 +294,8 @@
 <tr><td class='simpleText'>********************************************************************</td></tr>
 <tr><td class='simpleText'>೨೫. ಸ್ನಾನಂ</td></tr>
 <tr>
-<td class='VargaColorType1'><span class='black'>ಆ॒ದಿ॒ತ್ಯವ᳚ರ್ಣೇ॒</span><span class='red'>ತಪ॒ಸೋಽಧಿ॑ಜಾ॒ತೋ¦</span><span class='black'>ವನ॒ಸ್ಪತಿ॒ಸ್ತವ॑</span><span class='red'>ವೃ॒ಕ್ಷೋಽಥ</span><span class='black'>ಬಿ॒ಲ್ವಃ</span> |<p>
-<span class='black'>ತಸ್ಯ॒</span><span class='red'>ಫಲಾ᳚ನಿ॒</span><span class='black'>ತಪ॒ಸಾ</span><span class='red'>ನು॑ದಂತು¦</span><span class='black'>ಮಾ॒ಯಾ</span><span class='red'>ನ್ತ॑ರಾ॒</span><span class='black'>ಯಾಶ್ಚ॑</span><span class='red'>ಬಾ॒ಹ್ಯಾ,</span><span class='black'>ಅ॑ಲ॒ಕ್ಷ್ಮೀಃ</span> ||೬|| 
+<td class='VargaColorType1'><span class='black'>ಆ॒ದಿ॒ತ್ಯವ᳚ರ್ಣೇ॒</span><span class='red'>ತಪ॒ಸೋಽಧಿ॑</span><span class='black'>ಜಾ॒ತೋ¦</span><span class='red'>ವನ॒ಸ್ಪತಿ॒ಸ್ತವ॑</span><span class='black'>ವೃ॒ಕ್ಷೋಽಥ</span><span class='red'>ಬಿ॒ಲ್ವಃ</span> |<p>
+<span class='black'>ತಸ್ಯ॒</span><span class='red'>ಫಲಾ᳚ನಿ॒</span><span class='black'>ತಪ॒ಸಾ</span><span class='red'>ನು॑ದಂತು¦</span><span class='black'>ಮಾ॒ಯಾ</span><span class='red'>ನ್ತ॑ರಾ॒</span><span class='black'>ಯಾಶ್ಚ॑</span><span class='red'>ಬಾ॒ಹ್ಯಾ,</span><span class='black'>ಅ॑ಲ॒ಕ್ಷ್ಮೀಃ</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ದೇವ್ಯಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ಸ್ನಾನಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
@@ -304,7 +304,7 @@
 <tr><td class='simpleText'>೨೬. ವಸ್ತ್ರ ಸಮರ್ಪಣಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಉಪೈ᳚ತು॒</span><span class='red'>ಮಾಂ</span><span class='black'>ದೇ᳚ವಸ॒ಖಃ¦</span><span class='red'>ಕೀ॒ರ್‍ತಿಶ್ಚ॒</span><span class='black'>ಮಣಿ॑ನಾ</span><span class='red'>ಸ॒ಹ</span> |<p>
-<span class='black'>ಪ್ರಾ॒ದು॒ರ್ಭೂ॒ತೋಽಸ್ಮಿ॑</span><span class='red'>ರಾಷ್ಟ್ರೇಽಸ್ಮಿನ್‌¦</span><span class='black'>ಕೀ॒ರ್‍ತಿಮೃ॑ದ್ಧಿಂ</span><span class='red'>ದ॒ದಾತು॑</span><span class='black'>ಮೇ</span> ||೭|| 
+<span class='black'>ಪ್ರಾ॒ದು॒ರ್ಭೂ॒ತೋಽಸ್ಮಿ॑</span><span class='red'>ರಾಷ್ಟ್ರೇ॒ಽಸ್ಮಿನ್‌¦</span><span class='black'>ಕೀ॒ರ್‍ತಿಮೃ॑ದ್ಧಿಂ</span><span class='red'>ದ॒ದಾತು॑</span><span class='black'>ಮೇ</span> || 
 </td>
 </tr>
 <tr>
@@ -315,8 +315,8 @@
 <tr><td class='simpleText'>********************************************************************</td></tr>
 <tr><td class='simpleText'>೨೭. ಯಜ್ಞೋಪವೀತ ಸಮರ್ಪಣಂ</td></tr>
 <tr>
-<td class='VargaColorType1'><span class='black'>ಕ್ಷುತ್‌</span><span class='red'>ಪಿ॑ಪಾ॒ಸಾಮ॑ಲಾಂ</span><span class='black'>ಜ್ಯೇ॒ಷ್ಠಾ¦ಮಲ॒ಕ್ಷ್ಮೀಂ</span><span class='red'>ನಾ᳚ಶಯಾ॒ಮ್ಯಹಂ</span> |<p>
-<span class='black'>ಅಭೂ᳚ತಿ॒ಮಸ॑ಮೃದ್ಧಿಂ॒</span><span class='red'>ಚ¦</span><span class='black'>ಸರ್‍ವಾಂ॒</span><span class='red'>ನಿರ್ಣು॑ದ</span><span class='black'>ಮೇ॒</span><span class='red'>ಗೃಹಾ᳚ತ್</span> ||೮|| 
+<td class='VargaColorType1'><span class='black'>ಕ್ಷುತ್ಪಿ॑ಪಾ॒ಸಾಮ॑ಲಾಂ</span><span class='red'>ಜ್ಯೇ॒ಷ್ಠಾ¦ಮ॑ಲ॒ಕ್ಷ್ಮೀಂ</span><span class='black'>ನಾ᳚ಶಯಾ॒ಮ್ಯಹಂ᳚</span> |<p>
+<span class='black'>ಅಭೂ᳚ತಿ॒ಮಸ॑ಮೃದ್ಧಿಂ॒</span><span class='red'>ಚ¦</span><span class='black'>ಸರ್‍ವಾಂ॒</span><span class='red'>ನಿರ್ಣು॑ದ</span><span class='black'>ಮೇ॒</span><span class='red'>ಗೃಹಾ᳚ತ್</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಯಜ್ಞೋಪವೀತಂ ಪರಮಂ ಪವಿತ್ರಂ ಪ್ರಜಾ ಪತೇರ್ಯತ್ ಸಹಜಂ ಪುರಸ್ತಾತ್ |</td></tr>
@@ -327,7 +327,7 @@
 <tr><td class='simpleText'>೨೮. ಗಂಧ ವಿಲೇಪನಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಗಂಧ॑ದ್ವಾ॒ರಾಂ</span><span class='red'>ದು॑ರಾಧ॒ರ್ಷಾಂ¦</span><span class='black'>ನಿ॒ತ್ಯಪು॑ಷ್ಟಾಂ</span><span class='red'>ಕರೀ॒ಷಿಣೀಂ᳚</span> |<p>
-<span class='black'>ಈ॒ಶ್ವ॒ರೀಂ॒</span><span class='red'>ಸರ್‍ವ॑ಭೂತಾನಾಂ॒¦</span><span class='black'>ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒</span><span class='red'>ಶ್ರಿಯಂ᳚</span> ||೯|| 
+<span class='black'>ಈ॒ಶ್ವರೀಂ᳚</span><span class='red'>ಸರ್‍ವ॑ಭೂತಾ॒ನಾಂ¦</span><span class='black'>ತಾಮಿ॒ಹೋಪ॑</span><span class='red'>ಹ್ವಯೇ॒</span><span class='black'>ಶ್ರಿಯಂ᳚</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ದೇವ್ಯಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ಗಂಧಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
@@ -365,7 +365,7 @@
 <tr><td class='simpleText'>೩೩. ಪುಷ್ಪಸಮರ್ಪಣಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಮನ॑ಸಃ॒</span><span class='red'>ಕಾಮ॒ಮಾಕೂ᳚ತಿಂ¦</span><span class='black'>ವಾ॒ಚಃ</span><span class='red'>ಸ॒ತ್ಯಮ॑ಶೀಮಹಿ</span> |<p>
-<span class='black'>ಪ॒ಶೂ॒ನಾಂ</span><span class='red'>ರೂಪ॑ಮನ್ನ॒ಸ್ಯ¦</span><span class='black'>ಮಯಿ॒</span><span class='red'>ಶ್ರೀಃ</span><span class='black'>ಶ್ರ॑ಯತಾಂ॒</span><span class='red'>ಯಶಃ॑</span> [ವ:೨]||೧೦|| 
+<span class='black'>ಪ॒ಶೂ॒ನಾಂ</span><span class='red'>ರೂಪ॑ಮನ್ನ॒ಸ್ಯ¦</span><span class='black'>ಮಯಿ॒</span><span class='red'>ಶ್ರೀಃ</span><span class='black'>ಶ್ರ॑ಯತಾಂ॒</span><span class='red'>ಯಶಃ॑</span> [ವ:೨]|| 
 </td>
 </tr>
 <tr>
@@ -383,7 +383,7 @@
 <tr><td class='simpleText'>೩೫. ಧೂಪಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಕರ್ದ॑ಮೇ॒ನ</span><span class='red'>ಪ್ರ॑ಜಾ</span><span class='black'>ಭೂ॒ತಾ¦</span><span class='red'>ಮ॒ಯಿ</span><span class='black'>ಸಂ᳚ಭವ॒</span><span class='red'>ಕರ್ದ॑ಮ</span> |<p>
-<span class='black'>ಶ್ರಿಯಂ᳚</span><span class='red'>ವಾ॒ಸಯ॑</span><span class='black'>ಮೇ</span><span class='red'>ಕು॒ಲೇ¦</span><span class='black'>ಮಾ॒ತರಂ᳚</span><span class='red'>ಪದ್ಮ॒ಮಾಲಿ॑ನೀಂ</span> ||೧೧|| 
+<span class='black'>ಶ್ರಿಯಂ᳚</span><span class='red'>ವಾ॒ಸಯ॑</span><span class='black'>ಮೇ</span><span class='red'>ಕು॒ಲೇ¦</span><span class='black'>ಮಾ॒ತರಂ᳚</span><span class='red'>ಪದ್ಮ॒ಮಾಲಿ॑ನೀಂ</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ವನಸ್ಪತಿರಸೋತ್ಪನ್ನೋ ಗಂಧಾಡ್ಯೊ ಧೂಪ ಉತ್ತಮಃ | ಆಘ್ರೇಯಃ ಸರ್ವದೇವಾನಾಂ ಧೂಪೋಽಯಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ||</td></tr>
@@ -393,7 +393,7 @@
 <tr><td class='simpleText'>೩೬. ದೀಪಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಆಪಃ॒</span><span class='red'>ಸೃಜಂ᳚ತು॒</span><span class='black'>ಸ್ನಿಗ್ಧಾ᳚ನಿ॒¦</span><span class='red'>ಚಿಕ್ಲೀ᳚ತ॒</span><span class='black'>ವಸ॑</span><span class='red'>ಮೇ</span><span class='black'>ಗೃ॒ಹೇ</span> |<p>
-<span class='black'>ನಿ</span><span class='red'>ಚ॑</span><span class='black'>ದೇ॒ವೀಂ</span><span class='red'>ಮಾ॒ತರಂ॒</span><span class='black'>ಶ್ರಿಯಂ᳚¦</span><span class='red'>ವಾ॒ಸಯ॑</span><span class='black'>ಮೇ</span><span class='red'>ಕು॒ಲೇ</span> ||೧೨|| 
+<span class='black'>ನಿ</span><span class='red'>ಚ॑</span><span class='black'>ದೇ॒ವೀಂ</span><span class='red'>ಮಾ॒ತರಂ॒</span><span class='black'>ಶ್ರಿಯಂ᳚¦</span><span class='red'>ವಾ॒ಸಯ॑</span><span class='black'>ಮೇ</span><span class='red'>ಕು॒ಲೇ</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಜ್ಯೋತಿಃ ಶುಕ್ಲಶ್ಚತೇಜಶ್ಚ ದೇವಾನಾಂ ಸತತಂ ಪ್ರಿಯಃ | ಪ್ರಭಾಕರೋ ಮಹಾತೇಜಾ ದೀಪೋಯಂ ಪ್ರತಿಗೃಹ್ಯತಾ‌ಮ್</td></tr>
@@ -416,7 +416,7 @@
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಆ॒ರ್ದ್ರಾಂ</span><span class='red'>ಪು॒ಷ್ಕರಿ॑ಣೀಂ</span><span class='black'>ಪು॒ಷ್ಟಿಂ¦</span><span class='red'>ಸು॒ವರ್ಣಾ᳚</span><span class='black'>ಹೇಮ॒ಮಾಲಿ॑ನೀಂ</span> |<p>
-<span class='black'>ಸೂ॒ರ್‍ಯಾಂ</span><span class='red'>ಹಿ॒ರಣ್ಮ॑ಯೀಂ</span><span class='black'>ಲಕ್ಷ್ಮೀಂ॒¦</span><span class='red'>ಜಾತ॑ವೇದೋ</span><span class='black'>ಮ॒</span><span class='red'>ಆವಹ</span> ||೧೩|| 
+<span class='black'>ಸೂ॒ರ್‍ಯಾಂ</span><span class='red'>ಹಿ॒ರಣ್ಮ॑ಯೀಂ</span><span class='black'>ಲಕ್ಷ್ಮೀಂ॒¦</span><span class='red'>ಜಾತ॑ವೇದೋ</span><span class='black'>ಮ॒</span><span class='red'>ಆವಹ</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ದೇವ್ಯಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ನೈವೇದ್ಯಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
@@ -431,7 +431,7 @@
 <tr><td class='simpleText'>೩೯. ಅಥಃ ನೀರಾಜನಂ ಕರಿಷ್ಯೇ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಆ॒ರ್ದ್ರಾಂ</span><span class='red'>ಯಃ॒</span><span class='black'>ಕರಿ॑ಣೀಂ</span><span class='red'>ಯ॒ಷ್ಟಿಂ¦</span><span class='black'>ಪಿಂ॒ಗಲಾಂ᳚</span><span class='red'>ಪದ್ಮ॒ಮಾಲಿ॑ನೀಂ</span> |<p>
-<span class='black'>ಚಂ॒ದ್ರಾಂ</span><span class='red'>ಹಿ॒ರಣ್ಮ॑ಯೀಂ</span><span class='black'>ಲ॒ಕ್ಷ್ಮೀಂ¦</span><span class='red'>ಜಾತ॑ವೇದೋ</span><span class='black'>ಮ॒</span><span class='red'>ಆವ॑ಹ</span> ||೧೪|| 
+<span class='black'>ಚಂ॒ದ್ರಾಂ</span><span class='red'>ಹಿ॒ರಣ್ಮ॑ಯೀಂ</span><span class='black'>ಲ॒ಕ್ಷ್ಮೀಂ¦</span><span class='red'>ಜಾತ॑ವೇದೋ</span><span class='black'>ಮ॒</span><span class='red'>ಆವ॑ಹ</span> || 
 </td>
 </tr>
 <tr>
@@ -466,7 +466,7 @@
 <tr>
 <td class='VargaColorType1'><span class='black'>ಓಂ</span><span class='red'>ರಾ॒ಜಾ॒ಧಿ॒ರಾ॒ಜಾಯ॑</span><span class='black'>ಪ್ರಸಹ್ಯಸಾ॒ಹಿನೇ᳚</span> |<p>
 <span class='black'>ನಮೋ॑</span><span class='red'>ವ॒ಯಂ</span><span class='black'>ವೈ᳚ಶ್ರವ॒ಣಾಯ॑</span><span class='red'>ಕುರ್ಮಹೇ</span> |<p>
-<span class='black'>ಸ</span><span class='red'>ಮೇ॒</span><span class='black'></span><span class='red'>ಕಾಮಾ॒ನ್</span><span class='black'>ಕಾಮ॒ಕಾಮಾ॑ಯ॒</span><span class='red'>ಮಹ್ಯಂ᳚</span> |<p>
+<span class='black'>ಸ</span><span class='red'>ಮೇ॒</span><span class='black'></span><span class='red'>ಕಾಮಾ॒ನ್‌</span><span class='black'>ಕಾಮ॒ಕಾಮಾ॑ಯ॒</span><span class='red'>ಮಹ್ಯಂ᳚</span> |<p>
 <span class='black'>ಕಾ॒ಮೇ॒ಶ್ವ॒ರೋ</span><span class='red'>ವೈ᳚ಶ್ರವ॒ಣೋ</span><span class='black'>ದ॑ದಾತು</span> |<p>
 <span class='black'>ಕು॒ಬೇ॒ರಾಯ॑</span><span class='red'></span><span class='black'>ವೈಶ್ರವ॒ಣಾಯ॑</span> |<p>
 <span class='black'>ಮ॒ಹಾ॒ರಾ॒ಜಾಯ॒</span> ನಮಃ॑|| 
@@ -487,7 +487,7 @@
 <tr><td class='simpleText'>೪೧. ಪ್ರದಕ್ಷಿಣಂ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ತಾಂ</span><span class='red'>ಮ॒</span><span class='black'>ಆವ॑ಹ</span><span class='red'>ಜಾತವೇದೋ¦</span><span class='black'>ಲ॒ಕ್ಷ್ಮೀಮನ॑ಪಗಾ॒ಮಿನೀಂ᳚</span> |<p>
-<span class='black'>ಯಸ್ಯಾಂ॒</span><span class='red'>ಹಿರ᳚ಣ್ಯಂ॒</span><span class='black'>ಪ್ರಭೂ᳚ತಂ॒</span><span class='red'>ಗಾವೋ᳚¦</span><span class='black'>ದಾ॒ಸ್ಯೋಽಶ್ವಾ᳚ನ್‌,</span><span class='red'>ವಿಂ॒ದೇಯಂ॒</span><span class='black'>ಪುರು॑ಷಾನ॒ಹಂ</span> [ವ:೩]||೧೫|| 
+<span class='black'>ಯಸ್ಯಾಂ॒</span><span class='red'>ಹಿರ᳚ಣ್ಯಂ॒</span><span class='black'>ಪ್ರಭೂ᳚ತಂ॒</span><span class='red'>ಗಾವೋ᳚¦</span><span class='black'>ದಾ॒ಸ್ಯೋಽಶ್ವಾ᳚ನ್‌</span><span class='red'>ವಿಂ॒ದೇಯಂ॒</span><span class='black'>ಪುರು॑ಷಾನ॒ಹಂ</span> [ವ:೩]|| 
 </td>
 </tr>
 <tr><td class='simpleText'>ಪಾಪೋಹಂ ಪಾಪಕರ್ಮಾಹಂ ಪಾಪಾತ್ಮಾ ಪಾಪಸಂಭವಃ | ತ್ರಾಹಿ ಮಾಂ ಕೃಪಯಾ ದೇವೀ ಶರಣಾಗತವತ್ಸಲ ||</td></tr>
