--- a/Panchayatana/shiva-Panchayatana-1(Kannada).html
+++ b/Panchayatana/shiva-Panchayatana-1(Kannada).html
@@ -8,7 +8,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention
-{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}<br> [Last updated on: 23-Oct-2024]</h6>
+{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}<br> [Last updated on: 29-Oct-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -69,7 +69,7 @@
 <tr><td class='simpleText'>ಕಲಶಂ ಗಂಧಾಕ್ಷತ ಪತ್ರ ಪುಷ್ಪೈರಭ್ಯರ್ಚ</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಗಂಧ॑ದ್ವಾ॒ರಾಂ</span><span class='red'>ದು॑ರಾಧ॒ರ್ಷಾಂ¦</span><span class='black'>ನಿ॒ತ್ಯಪು॑ಷ್ಟಾಂ</span><span class='red'>ಕರೀ॒ಷಿಣೀಂ᳚</span> |<p>
-<span class='black'>ಈ॒ಶ್ವ॒ರೀಂ॒</span><span class='red'>ಸರ್‍ವ॑ಭೂತಾನಾಂ॒¦</span><span class='black'>ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒</span><span class='red'>ಶ್ರಿಯಂ᳚</span> ||೯|| 
+<span class='black'>ಈ॒ಶ್ವರೀಂ᳚</span><span class='red'>ಸರ್‍ವ॑ಭೂತಾ॒ನಾಂ¦</span><span class='black'>ತಾಮಿ॒ಹೋಪ॑</span><span class='red'>ಹ್ವಯೇ॒</span><span class='black'>ಶ್ರಿಯಂ᳚</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಗಂಧಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
@@ -316,7 +316,7 @@
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಗಂಧ॑ದ್ವಾ॒ರಾಂ</span><span class='red'>ದು॑ರಾಧ॒ರ್ಷಾಂ¦</span><span class='black'>ನಿ॒ತ್ಯಪು॑ಷ್ಟಾಂ</span><span class='red'>ಕರೀ॒ಷಿಣೀಂ᳚</span> |<p>
-<span class='black'>ಈ॒ಶ್ವ॒ರೀಂ॒</span><span class='red'>ಸರ್‍ವ॑ಭೂತಾನಾಂ॒¦</span><span class='black'>ತಾಮಿ॒ಹೋಪ॑ಹ್ವಯೇ॒</span><span class='red'>ಶ್ರಿಯಂ᳚</span> ||೯|| 
+<span class='black'>ಈ॒ಶ್ವರೀಂ᳚</span><span class='red'>ಸರ್‍ವ॑ಭೂತಾ॒ನಾಂ¦</span><span class='black'>ತಾಮಿ॒ಹೋಪ॑</span><span class='red'>ಹ್ವಯೇ॒</span><span class='black'>ಶ್ರಿಯಂ᳚</span> || 
 </td>
 </tr>
 <tr><td class='simpleText'>ಶ್ರೀ ಶಿವಾದಿ ಪಂಚಬ್ರಹ್ಮದೇವತಾಭ್ಯೋ ನಮಃ | ಗಂಧಂ ಸಮರ್ಪಯಾಮಿ ||</td></tr>
@@ -445,7 +445,7 @@
 <tr>
 <td class='VargaColorType1'><span class='black'>ಓಂ</span><span class='red'>ರಾ॒ಜಾ॒ಧಿ॒ರಾ॒ಜಾಯ॑</span><span class='black'>ಪ್ರಸಹ್ಯಸಾ॒ಹಿನೇ᳚</span> |<p>
 <span class='black'>ನಮೋ॑</span><span class='red'>ವ॒ಯಂ</span><span class='black'>ವೈ᳚ಶ್ರವ॒ಣಾಯ॑</span><span class='red'>ಕುರ್ಮಹೇ</span> |<p>
-<span class='black'>ಸ</span><span class='red'>ಮೇ॒</span><span class='black'></span><span class='red'>ಕಾಮಾ॒ನ್</span><span class='black'>ಕಾಮ॒ಕಾಮಾ॑ಯ॒</span><span class='red'>ಮಹ್ಯಂ᳚</span> |<p>
+<span class='black'>ಸ</span><span class='red'>ಮೇ॒</span><span class='black'></span><span class='red'>ಕಾಮಾ॒ನ್‌</span><span class='black'>ಕಾಮ॒ಕಾಮಾ॑ಯ॒</span><span class='red'>ಮಹ್ಯಂ᳚</span> |<p>
 <span class='black'>ಕಾ॒ಮೇ॒ಶ್ವ॒ರೋ</span><span class='red'>ವೈ᳚ಶ್ರವ॒ಣೋ</span><span class='black'>ದ॑ದಾತು</span> |<p>
 <span class='black'>ಕು॒ಬೇ॒ರಾಯ॑</span><span class='red'></span><span class='black'>ವೈಶ್ರವ॒ಣಾಯ॑</span> |<p>
 <span class='black'>ಮ॒ಹಾ॒ರಾ॒ಜಾಯ॒</span> ನಮಃ॑|| 
