--- a/VisheshaSuktas/brahmaNaspati-sUkta(Kannada).html
+++ b/VisheshaSuktas/brahmaNaspati-sUkta(Kannada).html
@@ -8,7 +8,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention
-{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}<br> [Last updated on: 23-Oct-2024]</h6>
+{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}<br> [Last updated on: 29-Oct-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -198,7 +198,7 @@
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಪ್ರಿ॒ಯಂ</span><span class='red'>ಮಾ᳚</span><span class='black'>ಕುರು</span><span class='red'>ದೇ॒ವೇಷು॑¦</span><span class='black'>ಪ್ರಿ॒ಯಂ</span><span class='red'>ರಾಜ॑ಸು</span><span class='black'>ಮಾ</span><span class='red'>ಕುರು</span> |<p>
-<span class='black'>ಪ್ರಿ॒ಯಂ</span><span class='red'>ವಿಶ್ವೇ᳚ಷು</span><span class='black'>ಗೋ॒ಪ್ತ್ರೇಷು॒¦</span><span class='red'>ಮಯಿ॑</span><span class='black'>ಧೇಹಿ</span><span class='red'>ರು॒ಚಾ</span><span class='black'>ರುಚಂ᳚	</span><span class='red'></span> ||೧೧|| 
+<span class='black'>ಪ್ರಿ॒ಯಂ</span><span class='red'>ವಿಶ್ವೇ᳚ಷು</span><span class='black'>ಗೋ॒ಪ್ತ್ರೇಷು॒¦</span><span class='red'>ಮಯಿ॑</span><span class='black'>ಧೇಹಿ</span><span class='red'>ರು॒ಚಾ</span><span class='black'>ರುಚಂ᳚	</span><span class='red'></span> || 
 </td>
 </tr>
 <tr>
