--- a/VisheshaSuktas/pavamAna-parishiShTam(Kannada).html
+++ b/VisheshaSuktas/pavamAna-parishiShTam(Kannada).html
@@ -8,114 +8,114 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention
-{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}<br> [Last updated on: 23-Oct-2024]</h6>
+{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}<br> [Last updated on: 29-Oct-2024]</h6>
 <hr>
 <table>
 <tbody>
 <tr><td class='simpleText'>*********************** ಪವಮಾನ ಪರಿಶಿಷ್ಟಂ ***********************</td></tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಪಾ॒ವ॒ಮಾ॒ನೀಃ</span><span class='red'>ಸ್ವ॒ಸ್ತ್ಯಯ॑ನೀಃ¦</span><span class='black'>ಸು॒ದುಘಾ॒</span><span class='red'>ಹಿ</span><span class='black'>ಘೃ॑ತ॒ಶ್ಚುತಃ॑</span> |<p>
-<span class='black'>ಋಷಿ॑ಭಿಃ॒</span><span class='red'>ಸಂಭೃ॑ತೋ॒</span><span class='black'>ರಸೋ᳚¦</span><span class='red'>ಬ್ರಾಹ್ಮ॒ಣೇಷ್ವ॒ಮೃತಂ᳚</span><span class='black'>ಹಿ॒ತಂ</span> ||೧|| 
+<span class='black'>ಋಷಿ॑ಭಿಃ॒</span><span class='red'>ಸಂಭೃ॑ತೋ॒</span><span class='black'>ರಸೋ᳚¦</span><span class='red'>ಬ್ರಾಹ್ಮ॒ಣೇಷ್ವ॒ಮೃತಂ᳚</span><span class='black'>ಹಿ॒ತಂ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಪಾ॒ವ॒ಮಾ॒ನೀರ್ದಿ॑ಶಂತು</span><span class='red'>ನ¦</span><span class='black'>ಇ॒ಮಂ</span><span class='red'>ಲೋಕಮಥೋ᳚,</span><span class='black'>ಅ॒ಮುಂ</span> |<p>
-<span class='black'>ಕಾಮಾಂ॒ತ್ಸಮ॑ರ್ಧಯಂತು</span><span class='red'>ನೋ¦</span><span class='black'>ದೇ॒ವೀರ್ದೇ॒ವೈಃ</span><span class='red'>ಸ॒ಮಾಹಿ॑ತಾಃ</span> ||೨|| 
+<span class='black'>ಕಾಮಾಂ॒ತ್ಸಮ॑ರ್ಧಯಂತು</span><span class='red'>ನೋ¦</span><span class='black'>ದೇ॒ವೀರ್ದೇ॒ವೈಃ</span><span class='red'>ಸ॒ಮಾಹಿ॑ತಾಃ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಯೇನ॑</span><span class='red'>ದೇ॒ವಾಃ</span><span class='black'>ಪ॒ವಿತ್ರೇ᳚ಣಾ॒¦</span><span class='red'>ಽಽತ್ಮಾನಂ᳚</span><span class='black'>ಪು॒ನತೇ॒</span><span class='red'>ಸದಾ᳚</span> |<p>
-<span class='black'>ತೇನ॑</span><span class='red'>ಸ॒ಹಸ್ರ॑ಧಾರೇಣ¦</span><span class='black'>ಪಾವಮಾ॒ನ್ಯಃ</span><span class='red'>ಪು॑ನಂತು</span><span class='black'>ಮಾಂ</span> ||೩|| 
+<span class='black'>ತೇನ॑</span><span class='red'>ಸ॒ಹಸ್ರ॑ಧಾರೇಣ¦</span><span class='black'>ಪಾವಮಾ॒ನ್ಯಃ</span><span class='red'>ಪು॑ನಂತು</span><span class='black'>ಮಾಂ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಪ್ರಾ॒ಜಾ॒ಪ॒ತ್ಯಂ</span><span class='red'>ಪ॒ವಿತ್ರಂ᳚¦</span><span class='black'>ಶ॒ತೋದ್ಯಾ᳚ಮಂ</span><span class='red'>ಹಿರ॒ಣ್ಮಯಂ᳚</span> |<p>
-<span class='black'>ತೇನ॑</span><span class='red'>ಬ್ರಹ್ಮ॒ವಿದೋ᳚</span><span class='black'>ವ॒ಯಂ¦</span><span class='red'>ಪೂ॒ತಂ</span><span class='black'>ಬ್ರಹ್ಮ॑</span><span class='red'>ಪುನೀಮಹೇ</span> ||೪|| 
+<span class='black'>ತೇನ॑</span><span class='red'>ಬ್ರಹ್ಮ॒ವಿದೋ᳚</span><span class='black'>ವ॒ಯಂ¦</span><span class='red'>ಪೂ॒ತಂ</span><span class='black'>ಬ್ರಹ್ಮ॑</span><span class='red'>ಪುನೀಮಹೇ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಇಂದ್ರಃ॑</span><span class='red'>ಪುನೀ॒ತೀ</span><span class='black'>ಸ॒ಹ</span><span class='red'>ಮಾ᳚</span><span class='black'>ಪುನಾತು॒¦</span><span class='red'>ಸೋಮಃ॑</span><span class='black'>ಸ್ವ॒ಸ್ತ್ಯಾ</span><span class='red'>ವರು॑ಣಃ</span><span class='black'>ಸ॒ಮೀಚ್ಯಾ᳚</span> |<p>
-<span class='black'>ಯ॒ಮೋ</span><span class='red'>ರಾಜಾ᳚</span><span class='black'>ಪ್ರಮೃ॒ಣಾಭಿಃ॑</span><span class='red'>ಪುನಾತು</span><span class='black'>ಮಾ¦</span><span class='red'>ಜಾ॒ತವೇ᳚ದಾ</span><span class='black'>ಮೂ॒ರ್ಜಯಂ᳚ತ್ಯಾ</span><span class='red'>ಪುನಾತು</span> ||೫|| 
+<span class='black'>ಯ॒ಮೋ</span><span class='red'>ರಾಜಾ᳚</span><span class='black'>ಪ್ರಮೃ॒ಣಾಭಿಃ॑</span><span class='red'>ಪುನಾತು</span><span class='black'>ಮಾ¦</span><span class='red'>ಜಾ॒ತವೇ᳚ದಾ</span><span class='black'>ಮೂ॒ರ್ಜಯಂ᳚ತ್ಯಾ</span><span class='red'>ಪುನಾತು</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಋ॒ಷ॒ಯ॒ಸ್ತು</span><span class='red'>ತ॑ಪಸ್ತೇ॒ಪುಃ¦</span><span class='black'>ಸ॒ರ್‍ವೇ</span><span class='red'>ಸ್ವ॑ರ್ಗಜಿ॒ಗೀಷ॑ವಃ</span> |<p>
-<span class='black'>ತ॒ಪ॒ಸ॒ಸ್ತ॒ಪ॒ಸೋ॒ಗ್ರ್ಯಂ᳚ತು¦</span><span class='red'>ಪಾ॒ವಮಾ᳚ನೀರೃ॒ಚೋಬ್ರ॑ವೀತ್</span><span class='black'>[ವ:೧]</span> ||೬|| 
+<span class='black'>ತ॒ಪ॒ಸ॒ಸ್ತ॒ಪ॒ಸೋ॒ಗ್ರ್ಯಂ᳚ತು¦</span><span class='red'>ಪಾ॒ವಮಾ᳚ನೀರೃ॒ಚೋಬ್ರ॑ವೀತ್</span><span class='black'>[ವ:೧]</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಯನ್ಮೇ॒</span><span class='red'>ಗರ್ಭೇ॒</span><span class='black'>ವಸ॑ತಃ</span><span class='red'>ಪಾ॒ಪಮು॒ಗ್ರಂ¦</span><span class='black'>ಯಜ್ಜಾ᳚ಯಮಾ॒ನಸ್ಯ॑</span><span class='red'>ಚ॒</span><span class='black'>ಕಿಂಚಿ॑ದನ್ಯತ್</span> |<p>
-<span class='black'>ಜಾ॒ತಸ್ಯ॑</span><span class='red'>ಚ॒</span><span class='black'>ಯಚ್ಚಾ᳚ಪಿ</span><span class='red'>ಚ॒</span><span class='black'>ವರ್ಧ॑ತೋ</span><span class='red'>ಮೇ॒¦</span><span class='black'>ತತ್‌</span><span class='red'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='black'>ಪು॒ನಾಮಿ</span> ||೭|| 
+<span class='black'>ಜಾ॒ತಸ್ಯ॑</span><span class='red'>ಚ॒</span><span class='black'>ಯಚ್ಚಾ᳚ಪಿ</span><span class='red'>ಚ॒</span><span class='black'>ವರ್ಧ॑ತೋ</span><span class='red'>ಮೇ॒¦</span><span class='black'>ತತ್‌</span><span class='red'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='black'>ಪು॒ನಾಮಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಮಾ॒ತಾಪಿ॒ತ್ರೋರ್‍ಯ॒ನ್ನ</span><span class='red'>ಕೃ॑ತಂ॒</span><span class='black'>ವಚೋ᳚</span><span class='red'>ಮೇ॒¦</span><span class='black'>ಯತ್‌</span><span class='red'>ಸ್ಥಾ᳚ವ॒ರಂ</span><span class='black'>ಜಂ॒ಗಮ॑ಮಾಬ॒ಭೂವ॑</span> |<p>
-<span class='black'>ವಿಶ್ವ॑ಸ್ಯ॒</span><span class='red'>ತತ್‌</span><span class='black'>ಪ್ರ॑ಹೃಷಿ॒ತಂ</span><span class='red'>ವಚೋ᳚</span><span class='black'>ಮೇ॒¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> ||೮|| 
+<span class='black'>ವಿಶ್ವ॑ಸ್ಯ॒</span><span class='red'>ತತ್‌</span><span class='black'>ಪ್ರ॑ಹೃಷಿ॒ತಂ</span><span class='red'>ವಚೋ᳚</span><span class='black'>ಮೇ॒¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಗೋಘ್ನಾ॒ತ್ತಸ್ಕ॑ರತ್ವಾ॒ತ್‌¦</span><span class='red'>ಸ್ತ್ರೀವ॑ಧಾ॒ದ್‌</span><span class='black'>ಯಚ್ಚ॒</span><span class='red'>ಕಿಲ್ಬಿ॑ಷಂ</span> |<p>
-<span class='black'>ಪಾ॒ಪ॒ಕಂ</span><span class='red'>ಚ॒</span><span class='black'>ಚರ॑ಣೇಭ್ಯ॒ಸ್¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> ||೯|| 
+<span class='black'>ಪಾ॒ಪ॒ಕಂ</span><span class='red'>ಚ॒</span><span class='black'>ಚರ॑ಣೇಭ್ಯ॒ಸ್¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಬ್ರಹ್ಮ॑ವಧಾ॒ತ್‌</span><span class='red'>ಸುರಾ᳚ಪಾನಾ॒ತ್‌</span><span class='black'>ಸ್ವ᳚ರ್ಣಸ್ತೇಯಾದ್‌¦</span><span class='red'>ವೃಷ॑ಲಿಗಮನಮೈಥುನಸಂಗ॒ಮಾತ್</span> |<p>
-<span class='black'>ಗು॒ರೋ॒ರ್ದಾ॒ರಾಧಿ॒ಗಮ॑ನಾಚ್ಚ॒¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> ||೧೦|| 
+<span class='black'>ಗು॒ರೋ॒ರ್ದಾ॒ರಾಧಿ॒ಗಮ॑ನಾಚ್ಚ॒¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಬಾಲ॑ಘ್ನಾ॒ನ್‌</span><span class='red'>ಮಾತೃ॑ಪಿತೃವಧಾ॒ದ್‌</span><span class='black'>ಭೂಮಿ॑ತಸ್ಕರಾ॒ತ್‌¦</span><span class='red'>ಸರ್‍ವ॑ವರ್ಣಗಮನಮೈಥುನಸಂಗ॒ಮಾತ್</span> |<p>
-<span class='black'>ಪಾ॒ಪೇಭ್ಯ॑ಶ್ಚ</span><span class='red'>ಪ್ರ॒ತಿಗ್ರ॑ಹಾ॒ತ್‌¦</span><span class='black'>ಸದ್ಯಃ॑</span><span class='red'>ಪ್ರಹರತಿ॒</span><span class='black'>ಸರ್‍ವ॑ದುಷ್ಕೃತಂ॒¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> ||೧೧|| 
+<span class='black'>ಪಾ॒ಪೇಭ್ಯ॑ಶ್ಚ</span><span class='red'>ಪ್ರ॒ತಿಗ್ರ॑ಹಾ॒ತ್‌¦</span><span class='black'>ಸದ್ಯಃ॑</span><span class='red'>ಪ್ರಹರತಿ॒</span><span class='black'>ಸರ್‍ವ॑ದುಷ್ಕೃತಂ॒¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಕ್ರಯ॑ವಿಕ್ರಯಾ॒ದ್‌</span><span class='red'>ಯೋನಿ॑ದೋಷಾ॒ದ್‌¦</span><span class='black'>ಭಕ್ಷಾ॒ದ್‌</span><span class='red'>ಭೋಜ್ಯಾ᳚ತ್‌</span><span class='black'>ಪ್ರ॒ತಿಗ್ರ॑ಹಾತ್</span> |<p>
-<span class='black'>ಅ॒ಸಂಭೋಜ॒ನಾಚ್ಚಾ᳚ಪಿ</span><span class='red'>ನೃ॒ಶಂಸಂ॒¦</span><span class='black'>ತತ್‌</span><span class='red'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='black'>ಪು॑ನಾಮಿ</span><span class='red'>[ವ:೨]</span> ||೧೨|| 
+<span class='black'>ಅ॒ಸಂಭೋಜ॒ನಾಚ್ಚಾ᳚ಪಿ</span><span class='red'>ನೃ॒ಶಂಸಂ॒¦</span><span class='black'>ತತ್‌</span><span class='red'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='black'>ಪು॑ನಾಮಿ</span><span class='red'>[ವ:೨]</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ದುರ್‍ಯ॑ಷ್ಟಂ॒</span><span class='red'>ದುರ॑ಧೀತಂ¦</span><span class='black'>ಪಾಪಂ॒</span><span class='red'>ಯಚ್ಚಾ᳚ಜ್ಞಾನ॒ತೋ</span><span class='black'>ಕೃತಂ</span> |<p>
-<span class='black'>ಅ॒ಯಾ॒ಜಿ॒ತಾ</span><span class='red'>ಶ್ಚಾ॒ಸಂಯಾ᳚ಜ್ಯಾ॒ಸ್¦</span><span class='black'>ತತ್‌</span><span class='red'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='black'>ಪು॑ನಾಮಿ</span> ||೧೩|| 
+<span class='black'>ಅ॒ಯಾ॒ಜಿ॒ತಾ</span><span class='red'>ಶ್ಚಾ॒ಸಂಯಾ᳚ಜ್ಯಾ॒ಸ್¦</span><span class='black'>ತತ್‌</span><span class='red'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='black'>ಪು॑ನಾಮಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಅ॒ಮಂ॒ತ್ರ॒ಮನ್ನಂ᳚</span><span class='red'>ಯತ್‌</span><span class='black'>ಕಿಂ॒ಚಿ¦ದ್ಧೂ॒ಯತೇ᳚</span><span class='red'>ಚ</span><span class='black'>ಹು॒ತಾಶ॑ನೇ</span> |<p>
-<span class='black'>ಸಂವ॑ತ್ಸ॒ರಕೃ॑ತಂ</span><span class='red'>ಪಾ॒ಪಂ¦</span><span class='black'>ತತ್‌</span><span class='red'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='black'>ಪು॑ನಾಮಿ</span> ||೧೪|| 
+<span class='black'>ಸಂವ॑ತ್ಸ॒ರಕೃ॑ತಂ</span><span class='red'>ಪಾ॒ಪಂ¦</span><span class='black'>ತತ್‌</span><span class='red'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='black'>ಪು॑ನಾಮಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಋ॒ತಸ್ಯ॒</span><span class='red'>ಯೋನ॑ಯೋಽಮೃ॒ತಸ್ಯ॒</span><span class='black'>ಧಾಮ॒¦</span><span class='red'>ವಿಶ್ವಾ᳚</span><span class='black'>ದೇ॒ವೇಭ್ಯಃ॒</span><span class='red'>ಪುಣ್ಯ॑ಗಂಧಾಃ</span> |<p>
-<span class='black'>ತಾ॒</span><span class='red'>ನ॒</span><span class='black'>ಆ॒ಪಃ॒</span><span class='red'>ಪ್ರ॒</span><span class='black'>ವಹಂ᳚ತು</span><span class='red'>ಪಾ॒ಪಂ¦</span><span class='black'>ಶು॒ದ್ಧಾ॒</span><span class='red'>ಗ॒ಚ್ಛಾ॒ಮಿ॒</span><span class='black'>ಸು॒ಕೃತಾ᳚ಮುಲೋ॒ಕಂ¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> ||೧೫|| 
+<span class='black'>ತಾ॒</span><span class='red'>ನ॒</span><span class='black'>ಆ॒ಪಃ॒</span><span class='red'>ಪ್ರ॒</span><span class='black'>ವಹಂ᳚ತು</span><span class='red'>ಪಾ॒ಪಂ¦</span><span class='black'>ಶು॒ದ್ಧಾ॒</span><span class='red'>ಗ॒ಚ್ಛಾ॒ಮಿ॒</span><span class='black'>ಸು॒ಕೃತಾ᳚ಮುಲೋ॒ಕಂ¦</span><span class='red'>ತತ್‌</span><span class='black'>ಪಾ᳚ವಮಾ॒ನೀಭಿ॑ರ॒ಹಂ</span><span class='red'>ಪು॑ನಾಮಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಪಾ॒ವ॒ಮಾ॒ನೀಃ</span><span class='red'>ಸ್ವ॒ಸ್ತ್ಯಯ॑ನೀ॒ರ್‌ಯಾಭಿ॑ರ್ಗಚ್ಛತಿ</span><span class='black'>ನಾಂದ॒ನಂ</span> |<p>
-<span class='black'>ಪುಣ್ಯಾಂ᳚ಶ್ಚ</span><span class='red'>ಭ॒ಕ್ಷ್ಯಾನ್‌</span><span class='black'>ಭ॑ಕ್ಷಯ¦ತ್ಯಮೃತ॒ತ್ವಂ</span><span class='red'>ಚ॑</span><span class='black'>ಗಚ್ಛತಿ</span> ||೧೬|| 
+<span class='black'>ಪುಣ್ಯಾಂ᳚ಶ್ಚ</span><span class='red'>ಭ॒ಕ್ಷ್ಯಾನ್‌</span><span class='black'>ಭ॑ಕ್ಷಯ¦ತ್ಯಮೃತ॒ತ್ವಂ</span><span class='red'>ಚ॑</span><span class='black'>ಗಚ್ಛತಿ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಪಾ॒ವ॒ಮಾ॒ನೀಃ</span><span class='red'>ಪಿ॒ತೄನ್‌</span><span class='black'>ದೇವಾನ್‌¦</span><span class='red'>ಧ್ಯಾ॒ಯೇದ್‌</span><span class='black'>ಯ॑ಶ್ಚ</span><span class='red'>ಸ॒ರಸ್ವ॑ತೀಂ</span> |<p>
-<span class='black'>ಪಿತೄಂ᳚ಸ್ತ॒ಸ್ಯೋಪ॑</span><span class='red'>ವರ್‍ತೇ॒ತ¦</span><span class='black'>ಕ್ಷೀ॒ರಂ</span><span class='red'>ಸ॒ರ್ಪಿರ್ಮಧೂ᳚ದ॒ಕಂ</span> ||೧೭|| 
+<span class='black'>ಪಿತೄಂ᳚ಸ್ತ॒ಸ್ಯೋಪ॑</span><span class='red'>ವರ್‍ತೇ॒ತ¦</span><span class='black'>ಕ್ಷೀ॒ರಂ</span><span class='red'>ಸ॒ರ್ಪಿರ್ಮಧೂ᳚ದ॒ಕಂ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಪಾ॒ವ॒ಮಾ॒ನಂ</span><span class='red'>ಪ॑ರಂ</span><span class='black'>ಬ್ರ॒ಹ್ಮ¦</span><span class='red'>ಶು॒ಕ್ರಂ</span><span class='black'>ಜ್ಯೋ᳚ತಿಃ</span><span class='red'>ಸ॒ನಾತ॑ನಂ</span> |<p>
-<span class='black'>ಋಷೀಂ᳚ಸ್ತ॒ಸ್ಯೋಪ॑</span><span class='red'>ತಿಷ್ಠೇ॒ತ¦</span><span class='black'>ಕ್ಷೀ॒ರಂ</span><span class='red'>ಸ॒ರ್ಪಿರ್ಮಧೂ᳚ದ॒ಕಂ</span> ||೧೮|| 
+<span class='black'>ಋಷೀಂ᳚ಸ್ತ॒ಸ್ಯೋಪ॑</span><span class='red'>ತಿಷ್ಠೇ॒ತ¦</span><span class='black'>ಕ್ಷೀ॒ರಂ</span><span class='red'>ಸ॒ರ್ಪಿರ್ಮಧೂ᳚ದ॒ಕಂ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಪಾ॒ವ॒ಮಾ॒ನಂ</span><span class='red'>ಪ॑ರಂ</span><span class='black'>ಬ್ರ॒ಹ್ಮ¦</span><span class='red'>ಯೇ॒</span><span class='black'>ಪಠಂ᳚ತಿ</span><span class='red'>ಮ॒ನೀಷಿ॑ಣಃ</span> |<p>
-<span class='black'>ಸಪ್ತ॑</span><span class='red'>ಜ॒ನ್ಮ</span><span class='black'>ಭ॑ವೇದ್‌</span><span class='red'>ವಿ॒ಪ್ರೋ¦</span><span class='black'>ಧ॒ನಾಢ್ಯೋ᳚</span><span class='red'>ವೇದ॒ಪಾರ॑ಗಃ</span> ||೧೯|| 
+<span class='black'>ಸಪ್ತ॑</span><span class='red'>ಜ॒ನ್ಮ</span><span class='black'>ಭ॑ವೇದ್‌</span><span class='red'>ವಿ॒ಪ್ರೋ¦</span><span class='black'>ಧ॒ನಾಢ್ಯೋ᳚</span><span class='red'>ವೇದ॒ಪಾರ॑ಗಃ</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ದಶೋ᳚ತ್ತ॒ರಾಣ್ಯೃ॑ಚಾಂಶ್ಚೈ॒ವ¦</span><span class='red'>ಪಾ॒ವಮಾ᳚ನೀಃ</span><span class='black'>ಶ॒ತಾನಿ॑</span><span class='red'>ಷಟ್</span> |<p>
-<span class='black'>ಏ॒ತ॒ಜ್ಜು॒ಹ್ವ॒ನ್‌</span><span class='red'>ಜ॒ಪೇ॒ನ್ಮಂತ್ರಂ᳚¦</span><span class='black'></span><span class='red'>ಘೋ॒ರಮೃ॑ತ್ಯುಭ॒ಯಂ</span><span class='black'>ಹ॑ರೇತ್</span> ||೨೦|| 
+<span class='black'>ಏ॒ತ॒ಜ್ಜು॒ಹ್ವ॒ನ್‌</span><span class='red'>ಜ॒ಪೇ॒ನ್ಮಂತ್ರಂ᳚¦</span><span class='black'></span><span class='red'>ಘೋ॒ರಮೃ॑ತ್ಯುಭ॒ಯಂ</span><span class='black'>ಹ॑ರೇತ್</span> || 
 </td>
 </tr>
 <tr>
 <td class='VargaColorType1'><span class='black'>ಏತತ್‌</span><span class='red'>ಪು॒ಣ್ಯಂ</span><span class='black'>ಪಾ᳚ಪಹ॒ರಂ¦</span><span class='red'>ರೋ॒ಗಮೃ॑ತ್ಯುಭ॒ಯಾಪ॑ಹಂ</span> |<p>
-<span class='black'>ಪಠ॑ತಾಂ</span><span class='red'>ಶೃಣ್ವ॑ತಾಂ</span><span class='black'>ಚೈ॒ವ¦</span><span class='red'>ದ॒ದಾತಿ॑</span><span class='black'>ಪರ॒ಮಾಂ</span><span class='red'>ಗ॑ತಿಂ</span> [ವ:೩]||೨೧|| 
+<span class='black'>ಪಠ॑ತಾಂ</span><span class='red'>ಶೃಣ್ವ॑ತಾಂ</span><span class='black'>ಚೈ॒ವ¦</span><span class='red'>ದ॒ದಾತಿ॑</span><span class='black'>ಪರ॒ಮಾಂ</span><span class='red'>ಗ॑ತಿಂ</span> [ವ:೩]|| 
 </td>
 </tr>
 </tbody>
