--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -10,7 +10,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 10-Nov-2024]</h6>
+<br> [Last updated on: 12-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -918,7 +918,7 @@
 <td class='VargaColorType2'>ಅಧ್ವ᳚ರ್ಯವಶ್ಚಕೃ॒ವಾಂಸೋ॒ಮಧೂ᳚ನಿ॒ಪ್ರವಾ॒ಯವೇ᳚ಭರತ॒ಚಾರು॑ಶು॒ಕ್ರಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಹೋತೇ᳚ವನಃಪ್ರಥ॒ಮಃಪಾ᳚ಹ್ಯ॒ಸ್ಯದೇವ॒ಮಧ್ವೋ᳚ರರಿ॒ಮಾತೇ॒ಮದಾ᳚ಯ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ದಶ॒ಕ್ಷಿಪೋ᳚ಯುಂಜತೇಬಾ॒ಹೂ,ಅದ್ರಿಂ॒ಸೋಮ॑ಸ್ಯ॒ಯಾಶ॑ಮಿ॒ತಾರಾ᳚ಸು॒ಹಸ್ತಾ᳚ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಮಧ್ವೋ॒ರಸಂ᳚ಸು॒ಗಭ॑ಸ್ತಿರ್ಗಿರಿ॒ಷ್ಠಾಂಚನಿ॑ಶ್ಚದದ್‌ದುದುಹೇಶು॒ಕ್ರಮಂ॒ಶುಃ(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaColorType2'>ದಶ॒ಕ್ಷಿಪೋ᳚ಯುಂಜತೇಬಾ॒ಹೂ,ಅದ್ರಿಂ॒ಸೋಮ॑ಸ್ಯ॒ಯಾಶ॑ಮಿ॒ತಾರಾ᳚ಸು॒ಹಸ್ತಾ᳚ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಮಧ್ವೋ॒ರಸಂ᳚ಸು॒ಗಭ॑ಸ್ತಿರ್‌ಗಿರಿ॒ಷ್ಠಾಂಚನಿ॑ಶ್ಚದದ್‌ದುದುಹೇಶು॒ಕ್ರಮಂ॒ಶುಃ(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಅಸಾ᳚ವಿತೇಜುಜುಷಾ॒ಣಾಯ॒ಸೋಮಃ॒ಕ್ರತ್ವೇ॒ದಕ್ಷಾ᳚ಯಬೃಹ॒ತೇಮದಾ᳚ಯ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಹರೀ॒ರಥೇ᳚ಸು॒ಧುರಾ॒ಯೋಗೇ᳚,ಅ॒ರ್‍ವಾಗಿಂದ್ರ॑ಪ್ರಿ॒ಯಾಕೃ॑ಣುಹಿಹೂ॒ಯಮಾ᳚ನಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
@@ -936,7 +936,7 @@
 <td class='VargaColorType1'>ಪ್ರತವ್ಯ॑ಸೋ॒ನಮ॑ಉಕ್ತಿಂತು॒ರಸ್ಯಾ॒ಽಹಂಪೂ॒ಷ್ಣಉ॒ತವಾ॒ಯೋರ॑ದಿಕ್ಷಿ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಾರಾಧ॑ಸಾಚೋದಿ॒ತಾರಾ᳚ಮತೀ॒ನಾಂಯಾವಾಜ॑ಸ್ಯದ್ರವಿಣೋ॒ದಾ,ಉ॒ತತ್ಮನ್(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaColorType1'>ಆನಾಮ॑ಭಿರ್ಮ॒ರುತೋ᳚ವಕ್ಷಿ॒ವಿಶ್ವಾ॒ನಾರೂ॒ಪೇಭಿ॑ರ್ಜಾತವೇದೋಹುವಾ॒ನಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯ॒ಜ್ಞಂಗಿರೋ᳚ಜರಿ॒ತುಃಸು॑ಷ್ಟು॒ತಿಂಚ॒ವಿಶ್ವೇ᳚ಗಂತಮರುತೋ॒ವಿಶ್ವ॑ಊ॒ತೀ(ಸ್ವಾಹಾ᳚) || 10 || </td>
+<td class='VargaColorType1'>ಆನಾಮ॑ಭಿರ್‌ಮ॒ರುತೋ᳚ವಕ್ಷಿ॒ವಿಶ್ವಾ॒ನಾರೂ॒ಪೇಭಿ॑ರ್‌ಜಾತವೇದೋಹುವಾ॒ನಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯ॒ಜ್ಞಂಗಿರೋ᳚ಜರಿ॒ತುಃಸು॑ಷ್ಟು॒ತಿಂಚ॒ವಿಶ್ವೇ᳚ಗಂತಮರುತೋ॒ವಿಶ್ವ॑ಊ॒ತೀ(ಸ್ವಾಹಾ᳚) || 10 || </td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಆನೋ᳚ದಿ॒ವೋಬೃ॑ಹ॒ತಃಪರ್‍ವ॑ತಾ॒ದಾಸರ॑ಸ್ವತೀಯಜ॒ತಾಗಂ᳚ತುಯ॒ಜ್ಞಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಹವಂ᳚ದೇ॒ವೀಜು॑ಜುಷಾ॒ಣಾಘೃ॒ತಾಚೀ᳚ಶ॒ಗ್ಮಾಂನೋ॒ವಾಚ॑ಮುಶ॒ತೀಶೃ॑ಣೋತು॒(ಸ್ವಾಹಾ᳚) || 11 || <span class='MantraNumbering'>ವರ್ಗ:22</span></td>
@@ -945,7 +945,7 @@
 <td class='VargaColorType2'>ಆವೇ॒ಧಸಂ॒ನೀಲ॑ಪೃಷ್ಠಂಬೃ॒ಹಂತಂ॒ಬೃಹ॒ಸ್ಪತಿಂ॒ಸದ॑ನೇಸಾದಯಧ್ವಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸಾ॒ದದ್ಯೋ᳚ನಿಂ॒ದಮ॒ಆದೀ᳚ದಿ॒ವಾಂಸಂ॒ಹಿರ᳚ಣ್ಯವರ್ಣಮರು॒ಷಂಸ॑ಪೇಮ॒(ಸ್ವಾಹಾ᳚) || 12 || </td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ಆಧ᳚ರ್ಣ॒ಸಿರ್ಬೃ॒ಹದ್ದಿ॑ವೋ॒ರರಾ᳚ಣೋ॒ವಿಶ್ವೇ᳚ಭಿರ್ಗಂ॒ತ್ವೋಮ॑ಭಿರ್ಹುವಾ॒ನಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಗ್ನಾವಸಾ᳚ನ॒ಓಷ॑ಧೀ॒ರಮೃ॑ಧ್ರಸ್ತ್ರಿ॒ಧಾತು॑ಶೃಂಗೋವೃಷ॒ಭೋವ॑ಯೋ॒ಧಾಃ(ಸ್ವಾಹಾ᳚) || 13 || </td>
+<td class='VargaColorType2'>ಆಧ᳚ರ್ಣ॒ಸಿರ್‌ಬೃ॒ಹದ್ದಿ॑ವೋ॒ರರಾ᳚ಣೋ॒ವಿಶ್ವೇ᳚ಭಿರ್‌ಗಂ॒ತ್ವೋಮ॑ಭಿರ್‌ಹುವಾ॒ನಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಗ್ನಾವಸಾ᳚ನ॒ಓಷ॑ಧೀ॒ರಮೃ॑ಧ್ರಸ್ತ್ರಿ॒ಧಾತು॑ಶೃಂಗೋವೃಷ॒ಭೋವ॑ಯೋ॒ಧಾಃ(ಸ್ವಾಹಾ᳚) || 13 || </td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಮಾ॒ತುಷ್ಪ॒ದೇಪ॑ರ॒ಮೇಶು॒ಕ್ರಆ॒ಯೋರ್‍ವಿ॑ಪ॒ನ್ಯವೋ᳚ರಾಸ್ಪಿ॒ರಾಸೋ᳚,ಅಗ್ಮನ್ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸು॒ಶೇವ್ಯಂ॒ನಮ॑ಸಾರಾ॒ತಹ᳚ವ್ಯಾಃ॒ಶಿಶುಂ᳚ಮೃಜಂತ್ಯಾ॒ಯವೋ॒ನವಾ॒ಸೇ(ಸ್ವಾಹಾ᳚) || 14 || </td>
@@ -969,19 +969,19 @@
 <td class='VargaColorType1'>ಶ್ರಿ॒ಯೇಸು॒ದೃಶೀ॒ರುಪ॑ರಸ್ಯ॒ಯಾಃಸ್ವ᳚ರ್ವಿ॒ರೋಚ॑ಮಾನಃಕ॒ಕುಭಾ᳚ಮಚೋ॒ದತೇ᳚ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಸು॒ಗೋ॒ಪಾ,ಅ॑ಸಿ॒ನದಭಾ᳚ಯಸುಕ್ರತೋಪ॒ರೋಮಾ॒ಯಾಭಿ᳚ರೃ॒ತಆ᳚ಸ॒ನಾಮ॑ತೇ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaColorType1'>ಅತ್ಯಂ᳚ಹ॒ವಿಃಸ॑ಚತೇ॒ಸಚ್ಚ॒ಧಾತು॒ಚಾರಿ॑ಷ್ಟಗಾತುಃ॒ಸಹೋತಾ᳚ಸಹೋ॒ಭರಿಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಪ್ರ॒ಸರ್ಸ್ರಾ᳚ಣೋ॒,ಅನು॑ಬ॒ರ್ಹಿರ್‍ವೃಷಾ॒ಶಿಶು॒ರ್ಮಧ್ಯೇ॒ಯುವಾ॒ಜರೋ᳚ವಿ॒ಸ್ರುಹಾ᳚ಹಿ॒ತಃ(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaColorType1'>ಅತ್ಯಂ᳚ಹ॒ವಿಃಸ॑ಚತೇ॒ಸಚ್ಚ॒ಧಾತು॒ಚಾರಿ॑ಷ್ಟಗಾತುಃ॒ಸಹೋತಾ᳚ಸಹೋ॒ಭರಿಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಪ್ರ॒ಸರ್ಸ್ರಾ᳚ಣೋ॒,ಅನು॑ಬ॒ರ್ಹಿರ್‌ವೃಷಾ॒ಶಿಶು॒ರ್ಮಧ್ಯೇ॒ಯುವಾ॒ಜರೋ᳚ವಿ॒ಸ್ರುಹಾ᳚ಹಿ॒ತಃ(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaColorType1'>ಪ್ರವ॑ಏ॒ತೇಸು॒ಯುಜೋ॒ಯಾಮ᳚ನ್ನಿ॒ಷ್ಟಯೇ॒ನೀಚೀ᳚ರ॒ಮುಷ್ಮೈ᳚ಯ॒ಮ್ಯ॑ಋತಾ॒ವೃಧಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಸು॒ಯಂತು॑ಭಿಃಸರ್‍ವಶಾ॒ಸೈರ॒ಭೀಶು॑ಭಿಃ॒ಕ್ರಿವಿ॒ರ್‍ನಾಮಾ᳚ನಿಪ್ರವ॒ಣೇಮು॑ಷಾಯತಿ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaColorType1'>ಸಂ॒ಜರ್ಭು॑ರಾಣ॒ಸ್ತರು॑ಭಿಃಸುತೇ॒ಗೃಭಂ᳚ವಯಾ॒ಕಿನಂ᳚ಚಿ॒ತ್ತಗ॑ರ್ಭಾಸುಸು॒ಸ್ವರುಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಧಾ॒ರ॒ವಾ॒ಕೇಷ್ವೃ॑ಜುಗಾಥಶೋಭಸೇ॒ವರ್ಧ॑ಸ್ವ॒ಪತ್ನೀ᳚ರ॒ಭಿಜೀ॒ವೋ,ಅ॑ಧ್ವ॒ರೇ(ಸ್ವಾಹಾ᳚) || 5 || </td>
+<td class='VargaColorType1'>ಸಂ॒ಜರ್‍ಭು॑ರಾಣ॒ಸ್ತರು॑ಭಿಃಸುತೇ॒ಗೃಭಂ᳚ವಯಾ॒ಕಿನಂ᳚ಚಿ॒ತ್ತಗ॑ರ್ಭಾಸುಸು॒ಸ್ವರುಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಧಾ॒ರ॒ವಾ॒ಕೇಷ್ವೃ॑ಜುಗಾಥಶೋಭಸೇ॒ವರ್ಧ॑ಸ್ವ॒ಪತ್ನೀ᳚ರ॒ಭಿಜೀ॒ವೋ,ಅ॑ಧ್ವ॒ರೇ(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಯಾ॒ದೃಗೇ॒ವದದೃ॑ಶೇತಾ॒ದೃಗು॑ಚ್ಯತೇ॒ಸಂಛಾ॒ಯಯಾ᳚ದಧಿರೇಸಿ॒ಧ್ರಯಾ॒ಪ್ಸ್ವಾ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಮ॒ಹೀಮ॒ಸ್ಮಭ್ಯ॑ಮುರು॒ಷಾಮು॒ರುಜ್ರಯೋ᳚ಬೃ॒ಹತ್‌ಸು॒ವೀರ॒ಮನ॑ಪಚ್ಯುತಂ॒ಸಹಃ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:24</span></td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ವೇತ್ಯಗ್ರು॒ರ್ಜನಿ॑ವಾ॒ನ್‌ವಾ,ಅತಿ॒ಸ್ಪೃಧಃ॑ಸಮರ್‍ಯ॒ತಾಮನ॑ಸಾ॒ಸೂರ್‍ಯಃ॑ಕ॒ವಿಃ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಘ್ರಂ॒ಸಂರಕ್ಷಂ᳚ತಂ॒ಪರಿ॑ವಿ॒ಶ್ವತೋ॒ಗಯ॑ಮ॒ಸ್ಮಾಕಂ॒ಶರ್ಮ॑ವನವ॒ತ್‌ಸ್ವಾವ॑ಸುಃ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
+<td class='VargaColorType2'>ವೇತ್ಯಗ್ರು॒ರ್‌ಜನಿ॑ವಾ॒ನ್‌ವಾ,ಅತಿ॒ಸ್ಪೃಧಃ॑ಸಮರ್‍ಯ॒ತಾಮನ॑ಸಾ॒ಸೂರ್‍ಯಃ॑ಕ॒ವಿಃ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಘ್ರಂ॒ಸಂರಕ್ಷಂ᳚ತಂ॒ಪರಿ॑ವಿ॒ಶ್ವತೋ॒ಗಯ॑ಮ॒ಸ್ಮಾಕಂ॒ಶರ್ಮ॑ವನವ॒ತ್‌ಸ್ವಾವ॑ಸುಃ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಜ್ಯಾಯಾಂ᳚ಸಮ॒ಸ್ಯಯ॒ತುನ॑ಸ್ಯಕೇ॒ತುನ॑ಋಷಿಸ್ವ॒ರಂಚ॑ರತಿ॒ಯಾಸು॒ನಾಮ॑ತೇ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಯಾ॒ದೃಶ್ಮಿ॒ನ್‌ಧಾಯಿ॒ತಮ॑ಪ॒ಸ್ಯಯಾ᳚ವಿದ॒ದ್‌ಯಉ॑ಸ್ವ॒ಯಂವಹ॑ತೇ॒ಸೋ,ಅರಂ᳚ಕರ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 8 || </td>
@@ -999,7 +999,7 @@
 <td class='VargaColorType1'>ಸ॒ದಾ॒ಪೃ॒ಣೋಯ॑ಜ॒ತೋವಿದ್ವಿಷೋ᳚ವಧೀದ್‌ಬಾಹುವೃ॒ಕ್ತಃಶ್ರು॑ತ॒ವಿತ್ತರ್‍ಯೋ᳚ವಃ॒ಸಚಾ᳚ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಉ॒ಭಾಸವರಾ॒ಪ್ರತ್ಯೇ᳚ತಿ॒ಭಾತಿ॑ಚ॒ಯದೀಂ᳚ಗ॒ಣಂಭಜ॑ತೇಸುಪ್ರ॒ಯಾವ॑ಭಿಃ॒(ಸ್ವಾಹಾ᳚) || 12 || </td>
 </tr>
 <tr>
-<td class='VargaColorType1'>ಸು॒ತಂ॒ಭ॒ರೋಯಜ॑ಮಾನಸ್ಯ॒ಸತ್ಪ॑ತಿ॒ರ್‍ವಿಶ್ವಾ᳚ಸಾ॒ಮೂಧಃ॒ಸಧಿ॒ಯಾಮು॒ದಂಚ॑ನಃ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಭರ॑ದ್ಧೇ॒ನೂರಸ॑ವಚ್ಛಿಶ್ರಿಯೇ॒ಪಯೋ᳚ಽನುಬ್ರುವಾ॒ಣೋ,ಅಧ್ಯೇ᳚ತಿ॒ನಸ್ವ॒ಪನ್(ಸ್ವಾಹಾ᳚) || 13 || </td>
+<td class='VargaColorType1'>ಸು॒ತಂ॒ಭ॒ರೋಯಜ॑ಮಾನಸ್ಯ॒ಸತ್ಪ॑ತಿ॒ರ್‍ವಿಶ್ವಾ᳚ಸಾ॒ಮೂಧಃ॒ಸಧಿ॒ಯಾಮು॒ದಂಚ॑ನಃ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಭರ॑ದ್‌ಧೇ॒ನೂರಸ॑ವಚ್ಛಿಶ್ರಿಯೇ॒ಪಯೋ᳚ಽನುಬ್ರುವಾ॒ಣೋ,ಅಧ್ಯೇ᳚ತಿ॒ನಸ್ವ॒ಪನ್(ಸ್ವಾಹಾ᳚) || 13 || </td>
 </tr>
 <tr>
 <td class='VargaColorType1'>ಯೋಜಾ॒ಗಾರ॒ತಮೃಚಃ॑ಕಾಮಯಂತೇ॒ಯೋಜಾ॒ಗಾರ॒ತಮು॒ಸಾಮಾ᳚ನಿಯಂತಿ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯೋಜಾ॒ಗಾರ॒ತಮ॒ಯಂಸೋಮ॑ಆಹ॒ತವಾ॒ಹಮ॑ಸ್ಮಿಸ॒ಖ್ಯೇನ್ಯೋ᳚ಕಾಃ॒(ಸ್ವಾಹಾ᳚) || 14 || </td>
@@ -1011,7 +1011,7 @@
 <td class='SuktaLabel'>[37] ವಿದಾದಿವಇತ್ಯೇಕಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಸದಾಪೃಣೋ ವಿಶ್ವೇದೇವಾಸ್ತ್ರಿಷ್ಟುಪ್ | (ಭೇದಪಕ್ಷೇ - ಇಂದ್ರಸೂರ್ಯೌ ೧ ವಿಶ್ವೇದೇವಾಃ ೨ ಇಂದ್ರಾಗ್ನೀ ೧ ವಿಶ್ವೇದೇವಾಃ ೬ ಆಪಃ ೧ ಏವಂ ೧೧ (ಅತ್ರಸೂಕ್ತೇ ಸದಾಪೃಣರ್ಷೇರ್ಯಜತಇತ್ಯಾದಿ ಲಿಂಗೋಕ್ತಋಷಿಭಿಃ ಸಮುಚ್ಚಯಇತಿ ಕೇಚಿತ್) |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:2}{ಮಂಡಲ:5, ಸೂಕ್ತ:45}{ಅನುವಾಕ:4, ಸೂಕ್ತ:1}</td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ವಿ॒ದಾದಿ॒ವೋವಿ॒ಷ್ಯನ್ನದ್ರಿ॑ಮು॒ಕ್ಥೈರಾ᳚ಯ॒ತ್ಯಾ,ಉ॒ಷಸೋ᳚,ಅ॒ರ್ಚಿನೋ᳚ಗುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಪಾ᳚ವೃತವ್ರ॒ಜಿನೀ॒ರುತ್‌ಸ್ವ॑ರ್ಗಾ॒ದ್‌ವಿದುರೋ॒ಮಾನು॑ಷೀರ್ದೇ॒ವಆ᳚ವಃ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:26</span></td>
+<td class='VargaColorType2'>ವಿ॒ದಾದಿ॒ವೋವಿ॒ಷ್ಯನ್ನದ್ರಿ॑ಮು॒ಕ್ಥೈರಾ᳚ಯ॒ತ್ಯಾ,ಉ॒ಷಸೋ᳚,ಅ॒ರ್ಚಿನೋ᳚ಗುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಪಾ᳚ವೃತವ್ರ॒ಜಿನೀ॒ರುತ್‌ಸ್ವ॑ರ್ಗಾ॒ದ್‌ವಿದುರೋ॒ಮಾನು॑ಷೀರ್‌ದೇ॒ವಆ᳚ವಃ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:26</span></td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ವಿಸೂರ್‍ಯೋ᳚,ಅ॒ಮತಿಂ॒ನಶ್ರಿಯಂ᳚ಸಾ॒ದೋರ್‍ವಾದ್‌ಗವಾಂ᳚ಮಾ॒ತಾಜಾ᳚ನ॒ತೀಗಾ᳚ತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಧನ್ವ᳚ರ್ಣಸೋನ॒ದ್ಯ೧॑(ಅಃ॒)ಖಾದೋ᳚ಅರ್ಣಾಃ॒ಸ್ಥೂಣೇ᳚ವ॒ಸುಮಿ॑ತಾದೃಂಹತ॒ದ್ಯೌಃ(ಸ್ವಾಹಾ᳚) || 2 || </td>
@@ -1023,7 +1023,7 @@
 <td class='VargaColorType2'>ಸೂ॒ಕ್ತೇಭಿ᳚ರ್ವೋ॒ವಚೋ᳚ಭಿರ್ದೇ॒ವಜು॑ಷ್ಟೈ॒ರಿಂದ್ರಾ॒ನ್ವ೧॑(ಅ॒)ಗ್ನೀ,ಅವ॑ಸೇಹು॒ವಧ್ಯೈ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ಕ್ಥೇಭಿ॒ರ್ಹಿಷ್ಮಾ᳚ಕ॒ವಯಃ॑ಸುಯ॒ಜ್ಞಾ,ಆ॒ವಿವಾ᳚ಸಂತೋಮ॒ರುತೋ॒ಯಜಂ᳚ತಿ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ಏತೋ॒ನ್ವ೧॑(ಅ॒)ದ್ಯಸು॒ಧ್ಯೋ॒೩॑(ಓ॒)ಭವಾ᳚ಮ॒ಪ್ರದು॒ಚ್ಛುನಾ᳚ಮಿನವಾಮಾ॒ವರೀ᳚ಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆ॒ರೇದ್ವೇಷಾಂ᳚ಸಿಸನು॒ತರ್ದ॑ಧಾ॒ಮಾಽಯಾ᳚ಮ॒ಪ್ರಾಂಚೋ॒ಯಜ॑ಮಾನ॒ಮಚ್ಛ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
+<td class='VargaColorType2'>ಏತೋ॒ನ್ವ೧॑(ಅ॒)ದ್ಯಸು॒ಧ್ಯೋ॒೩॑(ಓ॒)ಭವಾ᳚ಮ॒ಪ್ರದು॒ಚ್ಛುನಾ᳚ಮಿನವಾಮಾ॒ವರೀ᳚ಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆ॒ರೇದ್ವೇಷಾಂ᳚ಸಿಸನು॒ತರ್‌ದ॑ಧಾ॒ಮಾಽಯಾ᳚ಮ॒ಪ್ರಾಂಚೋ॒ಯಜ॑ಮಾನ॒ಮಚ್ಛ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaColorType1'>ಏತಾ॒ಧಿಯಂ᳚ಕೃ॒ಣವಾ᳚ಮಾಸಖಾ॒ಯೋಽಪ॒ಯಾಮಾ॒ತಾಁ,ಋ॑ಣು॒ತವ್ರ॒ಜಂಗೋಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಯಾ॒ಮನು᳚ರ್ವಿಶಿಶಿ॒ಪ್ರಂಜಿ॒ಗಾಯ॒ಯಯಾ᳚ವ॒ಣಿಗ್ವಂ॒ಕುರಾಪಾ॒ಪುರೀ᳚ಷ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:27</span></td>
