--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A04.html
@@ -8,7 +8,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 10-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 12-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -916,7 +916,7 @@
 <td class='VargaColorType2'>ಅಧ್ವ᳚ರ್ಯವಶ್ಚಕೃ॒ವಾಂಸೋ॒ ಮಧೂ᳚ನಿ॒ ಪ್ರ ವಾ॒ಯವೇ᳚ ಭರತ॒ ಚಾರು॑ ಶು॒ಕ್ರಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಹೋತೇ᳚ವ ನಃ ಪ್ರಥ॒ಮಃ ಪಾ᳚ಹ್ಯ॒ಸ್ಯ ದೇವ॒ ಮಧ್ವೋ᳚ ರರಿ॒ಮಾ ತೇ॒ ಮದಾ᳚ಯ ||<span class='MantraNumbering'>{3/17}{4.2.20.3}{5.43.3}{5.3.11.3}{397, 3992}</span></td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ದಶ॒ ಕ್ಷಿಪೋ᳚ ಯುಂಜತೇ ಬಾ॒ಹೂ, ಅದ್ರಿಂ॒ ಸೋಮ॑ಸ್ಯ॒ ಯಾ ಶ॑ಮಿ॒ತಾರಾ᳚ ಸು॒ಹಸ್ತಾ᳚ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಮಧ್ವೋ॒ ರಸಂ᳚ ಸು॒ಗಭ॑ಸ್ತಿರ್ಗಿರಿ॒ಷ್ಠಾಂ ಚನಿ॑ಶ್ಚದದ್‌ ದುದುಹೇ ಶು॒ಕ್ರಮಂ॒ಶುಃ ||<span class='MantraNumbering'>{4/17}{4.2.20.4}{5.43.4}{5.3.11.4}{397, 3993}</span></td>
+<td class='VargaColorType2'>ದಶ॒ ಕ್ಷಿಪೋ᳚ ಯುಂಜತೇ ಬಾ॒ಹೂ, ಅದ್ರಿಂ॒ ಸೋಮ॑ಸ್ಯ॒ ಯಾ ಶ॑ಮಿ॒ತಾರಾ᳚ ಸು॒ಹಸ್ತಾ᳚ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಮಧ್ವೋ॒ ರಸಂ᳚ ಸು॒ಗಭ॑ಸ್ತಿರ್‌ಗಿರಿ॒ಷ್ಠಾಂ ಚನಿ॑ಶ್ಚದದ್‌ ದುದುಹೇ ಶು॒ಕ್ರಮಂ॒ಶುಃ ||<span class='MantraNumbering'>{4/17}{4.2.20.4}{5.43.4}{5.3.11.4}{397, 3993}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಅಸಾ᳚ವಿ ತೇ ಜುಜುಷಾ॒ಣಾಯ॒ ಸೋಮಃ॒ ಕ್ರತ್ವೇ॒ ದಕ್ಷಾ᳚ಯ ಬೃಹ॒ತೇ ಮದಾ᳚ಯ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಹರೀ॒ ರಥೇ᳚ ಸು॒ಧುರಾ॒ ಯೋಗೇ᳚, ಅ॒ರ್‍ವಾಗಿಂದ್ರ॑ ಪ್ರಿ॒ಯಾ ಕೃ॑ಣುಹಿ ಹೂ॒ಯಮಾ᳚ನಃ ||<span class='MantraNumbering'>{5/17}{4.2.20.5}{5.43.5}{5.3.11.5}{397, 3994}</span></td>
@@ -934,7 +934,7 @@
 <td class='VargaColorType1'>ಪ್ರ ತವ್ಯ॑ಸೋ॒ ನಮ॑ಉಕ್ತಿಂ ತು॒ರಸ್ಯಾ॒ಽಹಂ ಪೂ॒ಷ್ಣ ಉ॒ತ ವಾ॒ಯೋರ॑ದಿಕ್ಷಿ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಾ ರಾಧ॑ಸಾ ಚೋದಿ॒ತಾರಾ᳚ ಮತೀ॒ನಾಂ ಯಾ ವಾಜ॑ಸ್ಯ ದ್ರವಿಣೋ॒ದಾ, ಉ॒ತ ತ್ಮನ್ ||<span class='MantraNumbering'>{9/17}{4.2.21.4}{5.43.9}{5.3.11.9}{397, 3998}</span></td>
 </tr>
 <tr>
-<td class='VargaColorType1'>ಆ ನಾಮ॑ಭಿರ್ಮ॒ರುತೋ᳚ ವಕ್ಷಿ॒ ವಿಶ್ವಾ॒ನಾ ರೂ॒ಪೇಭಿ॑ರ್ಜಾತವೇದೋ ಹುವಾ॒ನಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯ॒ಜ್ಞಂ ಗಿರೋ᳚ ಜರಿ॒ತುಃ ಸು॑ಷ್ಟು॒ತಿಂ ಚ॒ ವಿಶ್ವೇ᳚ ಗಂತ ಮರುತೋ॒ ವಿಶ್ವ॑ ಊ॒ತೀ ||<span class='MantraNumbering'>{10/17}{4.2.21.5}{5.43.10}{5.3.11.10}{397, 3999}</span></td>
+<td class='VargaColorType1'>ಆ ನಾಮ॑ಭಿರ್‌ಮ॒ರುತೋ᳚ ವಕ್ಷಿ॒ ವಿಶ್ವಾ॒ನಾ ರೂ॒ಪೇಭಿ॑ರ್‌ಜಾತವೇದೋ ಹುವಾ॒ನಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯ॒ಜ್ಞಂ ಗಿರೋ᳚ ಜರಿ॒ತುಃ ಸು॑ಷ್ಟು॒ತಿಂ ಚ॒ ವಿಶ್ವೇ᳚ ಗಂತ ಮರುತೋ॒ ವಿಶ್ವ॑ ಊ॒ತೀ ||<span class='MantraNumbering'>{10/17}{4.2.21.5}{5.43.10}{5.3.11.10}{397, 3999}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಆ ನೋ᳚ ದಿ॒ವೋ ಬೃ॑ಹ॒ತಃ ಪರ್‍ವ॑ತಾ॒ದಾ ಸರ॑ಸ್ವತೀ ಯಜ॒ತಾ ಗಂ᳚ತು ಯ॒ಜ್ಞಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಹವಂ᳚ ದೇ॒ವೀ ಜು॑ಜುಷಾ॒ಣಾ ಘೃ॒ತಾಚೀ᳚ ಶ॒ಗ್ಮಾಂ ನೋ॒ ವಾಚ॑ಮುಶ॒ತೀ ಶೃ॑ಣೋತು ||<span class='MantraNumbering'>{11/17}{4.2.22.1}{5.43.11}{5.3.11.11}{397, 4000}</span></td>
@@ -943,7 +943,7 @@
 <td class='VargaColorType2'>ಆ ವೇ॒ಧಸಂ॒ ನೀಲ॑ಪೃಷ್ಠಂ ಬೃ॒ಹಂತಂ॒ ಬೃಹ॒ಸ್ಪತಿಂ॒ ಸದ॑ನೇ ಸಾದಯಧ್ವಂ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸಾ॒ದದ್ಯೋ᳚ನಿಂ॒ ದಮ॒ ಆ ದೀ᳚ದಿ॒ವಾಂಸಂ॒ ಹಿರ᳚ಣ್ಯವರ್ಣಮರು॒ಷಂ ಸ॑ಪೇಮ ||<span class='MantraNumbering'>{12/17}{4.2.22.2}{5.43.12}{5.3.11.12}{397, 4001}</span></td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ಆ ಧ᳚ರ್ಣ॒ಸಿರ್ಬೃ॒ಹದ್ದಿ॑ವೋ॒ ರರಾ᳚ಣೋ॒ ವಿಶ್ವೇ᳚ಭಿರ್ಗಂ॒ತ್ವೋಮ॑ಭಿರ್ಹುವಾ॒ನಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಗ್ನಾ ವಸಾ᳚ನ॒ ಓಷ॑ಧೀ॒ರಮೃ॑ಧ್ರಸ್ತ್ರಿ॒ಧಾತು॑ಶೃಂಗೋ ವೃಷ॒ಭೋ ವ॑ಯೋ॒ಧಾಃ ||<span class='MantraNumbering'>{13/17}{4.2.22.3}{5.43.13}{5.3.11.13}{397, 4002}</span></td>
+<td class='VargaColorType2'>ಆ ಧ᳚ರ್ಣ॒ಸಿರ್‌ಬೃ॒ಹದ್ದಿ॑ವೋ॒ ರರಾ᳚ಣೋ॒ ವಿಶ್ವೇ᳚ಭಿರ್‌ಗಂ॒ತ್ವೋಮ॑ಭಿರ್‌ಹುವಾ॒ನಃ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಗ್ನಾ ವಸಾ᳚ನ॒ ಓಷ॑ಧೀ॒ರಮೃ॑ಧ್ರಸ್ತ್ರಿ॒ಧಾತು॑ಶೃಂಗೋ ವೃಷ॒ಭೋ ವ॑ಯೋ॒ಧಾಃ ||<span class='MantraNumbering'>{13/17}{4.2.22.3}{5.43.13}{5.3.11.13}{397, 4002}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಮಾ॒ತುಷ್ಪ॒ದೇ ಪ॑ರ॒ಮೇ ಶು॒ಕ್ರ ಆ॒ಯೋರ್‍ವಿ॑ಪ॒ನ್ಯವೋ᳚ ರಾಸ್ಪಿ॒ರಾಸೋ᳚, ಅಗ್ಮನ್ |<span class='RishiDevChandas'>{ಭೌಮೋತ್ರಿಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಸು॒ಶೇವ್ಯಂ॒ ನಮ॑ಸಾ ರಾ॒ತಹ᳚ವ್ಯಾಃ॒ ಶಿಶುಂ᳚ ಮೃಜಂತ್ಯಾ॒ಯವೋ॒ ನ ವಾ॒ಸೇ ||<span class='MantraNumbering'>{14/17}{4.2.22.4}{5.43.14}{5.3.11.14}{397, 4003}</span></td>
@@ -967,19 +967,19 @@
 <td class='VargaColorType1'>ಶ್ರಿ॒ಯೇ ಸು॒ದೃಶೀ॒ರುಪ॑ರಸ್ಯ॒ ಯಾಃ ಸ್ವ᳚ರ್ವಿ॒ರೋಚ॑ಮಾನಃ ಕ॒ಕುಭಾ᳚ಮಚೋ॒ದತೇ᳚ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಸು॒ಗೋ॒ಪಾ, ಅ॑ಸಿ॒ ನ ದಭಾ᳚ಯ ಸುಕ್ರತೋ ಪ॒ರೋ ಮಾ॒ಯಾಭಿ᳚ರೃ॒ತ ಆ᳚ಸ॒ ನಾಮ॑ ತೇ ||<span class='MantraNumbering'>{2/15}{4.2.23.2}{5.44.2}{5.3.12.2}{398, 4008}</span></td>
 </tr>
 <tr>
-<td class='VargaColorType1'>ಅತ್ಯಂ᳚ ಹ॒ವಿಃ ಸ॑ಚತೇ॒ ಸಚ್ಚ॒ ಧಾತು॒ ಚಾರಿ॑ಷ್ಟಗಾತುಃ॒ ಸ ಹೋತಾ᳚ ಸಹೋ॒ಭರಿಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಪ್ರ॒ಸರ್ಸ್ರಾ᳚ಣೋ॒, ಅನು॑ ಬ॒ರ್ಹಿರ್‍ವೃಷಾ॒ ಶಿಶು॒ರ್ಮಧ್ಯೇ॒ ಯುವಾ॒ಜರೋ᳚ ವಿ॒ಸ್ರುಹಾ᳚ ಹಿ॒ತಃ ||<span class='MantraNumbering'>{3/15}{4.2.23.3}{5.44.3}{5.3.12.3}{398, 4009}</span></td>
+<td class='VargaColorType1'>ಅತ್ಯಂ᳚ ಹ॒ವಿಃ ಸ॑ಚತೇ॒ ಸಚ್ಚ॒ ಧಾತು॒ ಚಾರಿ॑ಷ್ಟಗಾತುಃ॒ ಸ ಹೋತಾ᳚ ಸಹೋ॒ಭರಿಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಪ್ರ॒ಸರ್ಸ್ರಾ᳚ಣೋ॒, ಅನು॑ ಬ॒ರ್ಹಿರ್‌ವೃಷಾ॒ ಶಿಶು॒ರ್ಮಧ್ಯೇ॒ ಯುವಾ॒ಜರೋ᳚ ವಿ॒ಸ್ರುಹಾ᳚ ಹಿ॒ತಃ ||<span class='MantraNumbering'>{3/15}{4.2.23.3}{5.44.3}{5.3.12.3}{398, 4009}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType1'>ಪ್ರ ವ॑ ಏ॒ತೇ ಸು॒ಯುಜೋ॒ ಯಾಮ᳚ನ್ನಿ॒ಷ್ಟಯೇ॒ ನೀಚೀ᳚ರ॒ಮುಷ್ಮೈ᳚ ಯ॒ಮ್ಯ॑ ಋತಾ॒ವೃಧಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಸು॒ಯಂತು॑ಭಿಃ ಸರ್‍ವಶಾ॒ಸೈರ॒ಭೀಶು॑ಭಿಃ॒ ಕ್ರಿವಿ॒ರ್‍ನಾಮಾ᳚ನಿ ಪ್ರವ॒ಣೇ ಮು॑ಷಾಯತಿ ||<span class='MantraNumbering'>{4/15}{4.2.23.4}{5.44.4}{5.3.12.4}{398, 4010}</span></td>
 </tr>
 <tr>
-<td class='VargaColorType1'>ಸಂ॒ಜರ್ಭು॑ರಾಣ॒ಸ್ತರು॑ಭಿಃ ಸುತೇ॒ಗೃಭಂ᳚ ವಯಾ॒ಕಿನಂ᳚ ಚಿ॒ತ್ತಗ॑ರ್ಭಾಸು ಸು॒ಸ್ವರುಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಧಾ॒ರ॒ವಾ॒ಕೇಷ್ವೃ॑ಜುಗಾಥ ಶೋಭಸೇ॒ ವರ್ಧ॑ಸ್ವ॒ ಪತ್ನೀ᳚ರ॒ಭಿ ಜೀ॒ವೋ, ಅ॑ಧ್ವ॒ರೇ ||<span class='MantraNumbering'>{5/15}{4.2.23.5}{5.44.5}{5.3.12.5}{398, 4011}</span></td>
+<td class='VargaColorType1'>ಸಂ॒ಜರ್‍ಭು॑ರಾಣ॒ಸ್ತರು॑ಭಿಃ ಸುತೇ॒ಗೃಭಂ᳚ ವಯಾ॒ಕಿನಂ᳚ ಚಿ॒ತ್ತಗ॑ರ್ಭಾಸು ಸು॒ಸ್ವರುಃ॑ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಧಾ॒ರ॒ವಾ॒ಕೇಷ್ವೃ॑ಜುಗಾಥ ಶೋಭಸೇ॒ ವರ್ಧ॑ಸ್ವ॒ ಪತ್ನೀ᳚ರ॒ಭಿ ಜೀ॒ವೋ, ಅ॑ಧ್ವ॒ರೇ ||<span class='MantraNumbering'>{5/15}{4.2.23.5}{5.44.5}{5.3.12.5}{398, 4011}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಯಾ॒ದೃಗೇ॒ವ ದದೃ॑ಶೇ ತಾ॒ದೃಗು॑ಚ್ಯತೇ॒ ಸಂ ಛಾ॒ಯಯಾ᳚ ದಧಿರೇ ಸಿ॒ಧ್ರಯಾ॒ಪ್ಸ್ವಾ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಮ॒ಹೀಮ॒ಸ್ಮಭ್ಯ॑ಮುರು॒ಷಾಮು॒ರು ಜ್ರಯೋ᳚ ಬೃ॒ಹತ್‌ ಸು॒ವೀರ॒ಮನ॑ಪಚ್ಯುತಂ॒ ಸಹಃ॑ ||<span class='MantraNumbering'>{6/15}{4.2.24.1}{5.44.6}{5.3.12.6}{398, 4012}</span></td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ವೇತ್ಯಗ್ರು॒ರ್ಜನಿ॑ವಾ॒ನ್‌ ವಾ, ಅತಿ॒ ಸ್ಪೃಧಃ॑ ಸಮರ್‍ಯ॒ತಾ ಮನ॑ಸಾ॒ ಸೂರ್‍ಯಃ॑ ಕ॒ವಿಃ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಘ್ರಂ॒ಸಂ ರಕ್ಷಂ᳚ತಂ॒ ಪರಿ॑ ವಿ॒ಶ್ವತೋ॒ ಗಯ॑ಮ॒ಸ್ಮಾಕಂ॒ ಶರ್ಮ॑ ವನವ॒ತ್‌ ಸ್ವಾವ॑ಸುಃ ||<span class='MantraNumbering'>{7/15}{4.2.24.2}{5.44.7}{5.3.12.7}{398, 4013}</span></td>
+<td class='VargaColorType2'>ವೇತ್ಯಗ್ರು॒ರ್‌ಜನಿ॑ವಾ॒ನ್‌ ವಾ, ಅತಿ॒ ಸ್ಪೃಧಃ॑ ಸಮರ್‍ಯ॒ತಾ ಮನ॑ಸಾ॒ ಸೂರ್‍ಯಃ॑ ಕ॒ವಿಃ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಘ್ರಂ॒ಸಂ ರಕ್ಷಂ᳚ತಂ॒ ಪರಿ॑ ವಿ॒ಶ್ವತೋ॒ ಗಯ॑ಮ॒ಸ್ಮಾಕಂ॒ ಶರ್ಮ॑ ವನವ॒ತ್‌ ಸ್ವಾವ॑ಸುಃ ||<span class='MantraNumbering'>{7/15}{4.2.24.2}{5.44.7}{5.3.12.7}{398, 4013}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ಜ್ಯಾಯಾಂ᳚ಸಮ॒ಸ್ಯ ಯ॒ತುನ॑ಸ್ಯ ಕೇ॒ತುನ॑ ಋಷಿಸ್ವ॒ರಂ ಚ॑ರತಿ॒ ಯಾಸು॒ ನಾಮ॑ ತೇ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಯಾ॒ದೃಶ್ಮಿ॒ನ್‌ ಧಾಯಿ॒ ತಮ॑ಪ॒ಸ್ಯಯಾ᳚ ವಿದ॒ದ್‌ ಯ ಉ॑ ಸ್ವ॒ಯಂ ವಹ॑ತೇ॒ ಸೋ, ಅರಂ᳚ ಕರತ್ ||<span class='MantraNumbering'>{8/15}{4.2.24.3}{5.44.8}{5.3.12.8}{398, 4014}</span></td>
@@ -997,7 +997,7 @@
 <td class='VargaColorType1'>ಸ॒ದಾ॒ಪೃ॒ಣೋ ಯ॑ಜ॒ತೋ ವಿ ದ್ವಿಷೋ᳚ ವಧೀದ್‌ ಬಾಹುವೃ॒ಕ್ತಃ ಶ್ರು॑ತ॒ವಿತ್ತರ್‍ಯೋ᳚ ವಃ॒ ಸಚಾ᳚ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಉ॒ಭಾ ಸ ವರಾ॒ ಪ್ರತ್ಯೇ᳚ತಿ॒ ಭಾತಿ॑ ಚ॒ ಯದೀಂ᳚ ಗ॒ಣಂ ಭಜ॑ತೇ ಸುಪ್ರ॒ಯಾವ॑ಭಿಃ ||<span class='MantraNumbering'>{12/15}{4.2.25.2}{5.44.12}{5.3.12.12}{398, 4018}</span></td>
 </tr>
 <tr>
-<td class='VargaColorType1'>ಸು॒ತಂ॒ಭ॒ರೋ ಯಜ॑ಮಾನಸ್ಯ॒ ಸತ್ಪ॑ತಿ॒ರ್‍ವಿಶ್ವಾ᳚ಸಾ॒ಮೂಧಃ॒ ಸ ಧಿ॒ಯಾಮು॒ದಂಚ॑ನಃ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಭರ॑ದ್ಧೇ॒ನೂ ರಸ॑ವಚ್ಛಿಶ್ರಿಯೇ॒ ಪಯೋ᳚ ಽನುಬ್ರುವಾ॒ಣೋ, ಅಧ್ಯೇ᳚ತಿ॒ ನ ಸ್ವ॒ಪನ್ ||<span class='MantraNumbering'>{13/15}{4.2.25.3}{5.44.13}{5.3.12.13}{398, 4019}</span></td>
+<td class='VargaColorType1'>ಸು॒ತಂ॒ಭ॒ರೋ ಯಜ॑ಮಾನಸ್ಯ॒ ಸತ್ಪ॑ತಿ॒ರ್‍ವಿಶ್ವಾ᳚ಸಾ॒ಮೂಧಃ॒ ಸ ಧಿ॒ಯಾಮು॒ದಂಚ॑ನಃ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ಜಗತೀ}</span><p>ಭರ॑ದ್‌ ಧೇ॒ನೂ ರಸ॑ವಚ್ಛಿಶ್ರಿಯೇ॒ ಪಯೋ᳚ ಽನುಬ್ರುವಾ॒ಣೋ, ಅಧ್ಯೇ᳚ತಿ॒ ನ ಸ್ವ॒ಪನ್ ||<span class='MantraNumbering'>{13/15}{4.2.25.3}{5.44.13}{5.3.12.13}{398, 4019}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType1'>ಯೋ ಜಾ॒ಗಾರ॒ ತಮೃಚಃ॑ ಕಾಮಯಂತೇ॒ ಯೋ ಜಾ॒ಗಾರ॒ ತಮು॒ ಸಾಮಾ᳚ನಿ ಯಂತಿ |<span class='RishiDevChandas'>{ಕಾಶ್ಯಪೋ ವತ್ಸಾರಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯೋ ಜಾ॒ಗಾರ॒ ತಮ॒ಯಂ ಸೋಮ॑ ಆಹ॒ ತವಾ॒ಹಮ॑ಸ್ಮಿ ಸ॒ಖ್ಯೇ ನ್ಯೋ᳚ಕಾಃ ||<span class='MantraNumbering'>{14/15}{4.2.25.4}{5.44.14}{5.3.12.14}{398, 4020}</span></td>
@@ -1009,7 +1009,7 @@
 <td class='SuktaLabel'>[37] ವಿದಾದಿವಇತ್ಯೇಕಾದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಸದಾಪೃಣೋ ವಿಶ್ವೇದೇವಾಸ್ತ್ರಿಷ್ಟುಪ್ | (ಭೇದಪಕ್ಷೇ - ಇಂದ್ರಸೂರ್ಯೌ ೧ ವಿಶ್ವೇದೇವಾಃ ೨ ಇಂದ್ರಾಗ್ನೀ ೧ ವಿಶ್ವೇದೇವಾಃ ೬ ಆಪಃ ೧ ಏವಂ ೧೧ (ಅತ್ರಸೂಕ್ತೇ ಸದಾಪೃಣರ್ಷೇರ್ಯಜತಇತ್ಯಾದಿ ಲಿಂಗೋಕ್ತಋಷಿಭಿಃ ಸಮುಚ್ಚಯಇತಿ ಕೇಚಿತ್) |</td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ವಿ॒ದಾ ದಿ॒ವೋ ವಿ॒ಷ್ಯನ್ನದ್ರಿ॑ಮು॒ಕ್ಥೈರಾ᳚ಯ॒ತ್ಯಾ, ಉ॒ಷಸೋ᳚, ಅ॒ರ್ಚಿನೋ᳚ ಗುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಪಾ᳚ವೃತ ವ್ರ॒ಜಿನೀ॒ರುತ್‌ ಸ್ವ॑ರ್ಗಾ॒ದ್‌ ವಿ ದುರೋ॒ ಮಾನು॑ಷೀರ್ದೇ॒ವ ಆ᳚ವಃ ||<span class='MantraNumbering'>{1/11}{4.2.26.1}{5.45.1}{5.4.1.1}{399, 4022}</span></td>
+<td class='VargaColorType2'>ವಿ॒ದಾ ದಿ॒ವೋ ವಿ॒ಷ್ಯನ್ನದ್ರಿ॑ಮು॒ಕ್ಥೈರಾ᳚ಯ॒ತ್ಯಾ, ಉ॒ಷಸೋ᳚, ಅ॒ರ್ಚಿನೋ᳚ ಗುಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅಪಾ᳚ವೃತ ವ್ರ॒ಜಿನೀ॒ರುತ್‌ ಸ್ವ॑ರ್ಗಾ॒ದ್‌ ವಿ ದುರೋ॒ ಮಾನು॑ಷೀರ್‌ದೇ॒ವ ಆ᳚ವಃ ||<span class='MantraNumbering'>{1/11}{4.2.26.1}{5.45.1}{5.4.1.1}{399, 4022}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType2'>ವಿ ಸೂರ್‍ಯೋ᳚, ಅ॒ಮತಿಂ॒ ನ ಶ್ರಿಯಂ᳚ ಸಾ॒ದೋರ್‍ವಾದ್‌ ಗವಾಂ᳚ ಮಾ॒ತಾ ಜಾ᳚ನ॒ತೀ ಗಾ᳚ತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಧನ್ವ᳚ರ್ಣಸೋ ನ॒ದ್ಯ೧॑(ಅಃ॒) ಖಾದೋ᳚ಅರ್ಣಾಃ॒ ಸ್ಥೂಣೇ᳚ವ॒ ಸುಮಿ॑ತಾ ದೃಂಹತ॒ ದ್ಯೌಃ ||<span class='MantraNumbering'>{2/11}{4.2.26.2}{5.45.2}{5.4.1.2}{399, 4023}</span></td>
@@ -1021,7 +1021,7 @@
 <td class='VargaColorType2'>ಸೂ॒ಕ್ತೇಭಿ᳚ರ್ವೋ॒ ವಚೋ᳚ಭಿರ್ದೇ॒ವಜು॑ಷ್ಟೈ॒ರಿಂದ್ರಾ॒ ನ್ವ೧॑(ಅ॒)ಗ್ನೀ, ಅವ॑ಸೇ ಹು॒ವಧ್ಯೈ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ಕ್ಥೇಭಿ॒ರ್ಹಿ ಷ್ಮಾ᳚ ಕ॒ವಯಃ॑ ಸುಯ॒ಜ್ಞಾ, ಆ॒ವಿವಾ᳚ಸಂತೋ ಮ॒ರುತೋ॒ ಯಜಂ᳚ತಿ ||<span class='MantraNumbering'>{4/11}{4.2.26.4}{5.45.4}{5.4.1.4}{399, 4025}</span></td>
 </tr>
 <tr>
-<td class='VargaColorType2'>ಏತೋ॒ ನ್ವ೧॑(ಅ॒)ದ್ಯ ಸು॒ಧ್ಯೋ॒೩॑(ಓ॒) ಭವಾ᳚ಮ॒ ಪ್ರ ದು॒ಚ್ಛುನಾ᳚ ಮಿನವಾಮಾ॒ ವರೀ᳚ಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆ॒ರೇ ದ್ವೇಷಾಂ᳚ಸಿ ಸನು॒ತರ್ದ॑ಧಾ॒ಮಾಽಯಾ᳚ಮ॒ ಪ್ರಾಂಚೋ॒ ಯಜ॑ಮಾನ॒ಮಚ್ಛ॑ ||<span class='MantraNumbering'>{5/11}{4.2.26.5}{5.45.5}{5.4.1.5}{399, 4026}</span></td>
+<td class='VargaColorType2'>ಏತೋ॒ ನ್ವ೧॑(ಅ॒)ದ್ಯ ಸು॒ಧ್ಯೋ॒೩॑(ಓ॒) ಭವಾ᳚ಮ॒ ಪ್ರ ದು॒ಚ್ಛುನಾ᳚ ಮಿನವಾಮಾ॒ ವರೀ᳚ಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಆ॒ರೇ ದ್ವೇಷಾಂ᳚ಸಿ ಸನು॒ತರ್‌ದ॑ಧಾ॒ಮಾಽಯಾ᳚ಮ॒ ಪ್ರಾಂಚೋ॒ ಯಜ॑ಮಾನ॒ಮಚ್ಛ॑ ||<span class='MantraNumbering'>{5/11}{4.2.26.5}{5.45.5}{5.4.1.5}{399, 4026}</span></td>
 </tr>
 <tr>
 <td class='VargaColorType1'>ಏತಾ॒ ಧಿಯಂ᳚ ಕೃ॒ಣವಾ᳚ಮಾ ಸಖಾ॒ಯೋ ಽಪ॒ ಯಾ ಮಾ॒ತಾಁ, ಋ॑ಣು॒ತ ವ್ರ॒ಜಂ ಗೋಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಸದಾಪೃಣಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯಯಾ॒ ಮನು᳚ರ್ವಿಶಿಶಿ॒ಪ್ರಂ ಜಿ॒ಗಾಯ॒ ಯಯಾ᳚ ವ॒ಣಿಗ್ವಂ॒ಕುರಾಪಾ॒ ಪುರೀ᳚ಷಂ ||<span class='MantraNumbering'>{6/11}{4.2.27.1}{5.45.6}{5.4.1.6}{399, 4027}</span></td>
