--- a/Rigveda/SamhitaPatha/Kannada/RVKHILA(Kannada).html
+++ b/Rigveda/SamhitaPatha/Kannada/RVKHILA(Kannada).html
@@ -832,7 +832,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಪ್ರಿ॒ಯಂ</span><span class='style2'>ಮಾ᳚</span><span class='style1'>ಕುರು</span><span class='style2'>ದೇ॒ವೇಷು॑¦</span><span class='style1'>ಪ್ರಿ॒ಯಂ</span><span class='style2'>ರಾಜ॑ಸು</span><span class='style1'>ಮಾ</span><span class='style2'>ಕುರು</span> |<p><span class='style1'>ಪ್ರಿ॒ಯಂ</span><span class='style2'>ವಿಶ್ವೇ᳚ಷು</span><span class='style1'>ಗೋ॒ಪ್ತ್ರೇಷು॒¦</span><span class='style2'>ಮಯಿ॑</span><span class='style1'>ಧೇಹಿ</span><span class='style2'>ರು॒ಚಾ</span><span class='style1'>ರುಚಂ᳚	</span><span class='style2'></span> ||11|| 
+<span class='style1'>ಪ್ರಿ॒ಯಂ</span><span class='style2'>ಮಾ᳚</span><span class='style1'>ಕುರು</span><span class='style2'>ದೇ॒ವೇಷು॑¦</span><span class='style1'>ಪ್ರಿ॒ಯಂ</span><span class='style2'>ರಾಜ॑ಸು</span><span class='style1'>ಮಾ</span><span class='style2'>ಕುರು</span> |<p><span class='style1'>ಪ್ರಿ॒ಯಂ</span><span class='style2'>ವಿಶ್ವೇ᳚ಷು</span><span class='style1'>ಗೋ॒ಪ್ತ್ರೇಷು॒¦</span><span class='style2'>ಮಯಿ॑</span><span class='style1'>ಧೇಹಿ</span><span class='style2'>ರು॒ಚಾ</span><span class='style1'>ರುಚಂ᳚</span> ||11|| 
 </td>
 </tr>
 <tr>
@@ -850,7 +850,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಮೇ॒ಧಾಂ</span><span class='style2'>ಮಹ್ಯ॒ಮಂಗಿ॑ರಸೋ¦</span><span class='style1'>ಮೇ॒ಧಾಂ</span><span class='style2'>ಸ॒ಪ್ತ</span><span class='style1'>ಋಷ॑ಯೋ</span><span class='style2'>ದದುಃ</span> |<p><span class='style1'>ಮೇ॒ಧಾಮಿಂದ್ರ॑ಶ್ಚಾ॒ಗ್ನಿಶ್ಚ॑¦</span><span class='style2'>ಮೇ॒ಧಾಂ¦</span><span class='style1'>ಧಾ॒ತಾ</span><span class='style2'>ದ॑ದಾತು</span><span class='style1'>ತೇ</span> ||1|| 
+<span class='style1'>ಮೇ॒ಧಾಂ</span><span class='style2'>ಮಹ್ಯ॒ಮಂಗಿ॑ರಸೋ¦</span><span class='style1'>ಮೇ॒ಧಾಂ</span><span class='style2'>ಸ॒ಪ್ತ</span><span class='style1'>ಋಷ॑ಯೋ</span><span class='style2'>ದದುಃ</span> |<p><span class='style1'>ಮೇ॒ಧಾಮಿಂದ್ರ॑ಶ್ಚಾ॒ಗ್ನಿಶ್ಚ॑¦</span><span class='style2'>ಮೇ॒ಧಾಂ</span><span class='style1'>ಧಾ॒ತಾ</span><span class='style2'>ದ॑ದಾತು</span><span class='style1'>ತೇ</span> ||1|| 
 </td>
 </tr>
 <tr>
@@ -865,17 +865,17 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಯನ್ಮೇ॒</span><span class='style2'>ನೋಕ್ತಂ॒</span><span class='style1'>ತದ್ರ॑ಮತಾಂ॒¦</span><span class='style2'>ಶಕೇ᳚ಯಂ॒</span><span class='style1'>ಯದ॑ನು॒ಬ್ರುವೇ᳚</span> |<p><span class='style1'>ನಿಶಾ᳚ಮತಂ॒</span><span class='style2'>ನಿ</span><span class='style1'>ಶಾ᳚ಮಹೈ॒¦</span><span class='style2'>ಮಯಿ᳚</span><span class='style1'>ವ್ರ॒ತಂ</span><span class='style2'>ಸ॒ಹ</span><span class='style1'>ವ್ರ॒ತೇಷು</span><span class='style2'>ಭೂಯಾಸಂ॒</span><span class='style1'>ಬ್ರಹ್ಮ॑ಣಾ॒</span><span class='style2'>ಸಂ</span><span class='style1'>ಗ॑ಮೇಮಹಿ</span> ||4|| 
+<span class='style1'>ಯನ್ಮೇ॒</span><span class='style2'>ನೋಕ್ತಂ॒</span><span class='style1'>ತದ್ರ॑ಮತಾಂ॒¦</span><span class='style2'>ಶಕೇ᳚ಯಂ॒</span><span class='style1'>ಯದ॑ನು॒ಬ್ರುವೇ᳚</span> |<p><span class='style1'>ನಿಶಾ᳚ಮತಂ॒</span><span class='style2'>ನಿ</span><span class='style1'>ಶಾ᳚ಮಹೈ॒¦</span><span class='style2'>ಮಯಿ᳚</span><span class='style1'>ವ್ರ॒ತಂ</span><span class='style2'>ಸ॒ಹ</span><span class='style1'>ವ್ರ॒ತೇಷು</span><span class='style2'>ಭೂಯಾಸಂ॒¦</span><span class='style1'>ಬ್ರಹ್ಮ॑ಣಾ॒</span><span class='style2'>ಸಂ</span><span class='style1'>ಗ॑ಮೇಮಹಿ</span> ||4|| 
 </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಶರೀ᳚ರಂ</span><span class='style2'>ಮೇ॒</span><span class='style1'>ವಿಚ॑ಕ್ಷಣಂ॒</span><span class='style2'>ವಾಙ್‌</span><span class='style1'>ಮೇ॒</span><span class='style2'>ಮಧು॑ಮ॒ದ್‌</span><span class='style1'>ದುಹಾಂ᳚</span> |<p><span class='style1'>ಆವೃ॑ದ್ಧಮ॒ಹಮ॒ಸೌ</span><span class='style2'>ಸೂರ್‍ಯೋ॒</span><span class='style1'>ಬ್ರಹ್ಮ॑ಣಾ॒ನಿ</span><span class='style2'>ಸ್ಥಃ॑</span><span class='style1'>ಶ್ರು॒ತಂ</span><span class='style2'>ಮೇ॒</span><span class='style1'>ಮಾ</span><span class='style2'>ಪ್ರ</span><span class='style1'>ಹಾ᳚ಸೀ</span> ||5|| 
+<span class='style1'>ಶರೀ᳚ರಂ</span><span class='style2'>ಮೇ॒</span><span class='style1'>ವಿಚ॑ಕ್ಷಣಂ॒¦</span><span class='style2'>ವಾಙ್‌</span><span class='style1'>ಮೇ॒</span><span class='style2'>ಮಧು॑ಮ॒ದ್‌</span><span class='style1'>ದುಹಾಂ᳚</span> |<p><span class='style1'>ಆವೃ॑ದ್ಧಮ॒ಹಮ॒ಸೌ</span><span class='style2'>ಸೂರ್‍ಯೋ॒</span><span class='style1'>ಬ್ರಹ್ಮ॑ಣಾ॒ನಿ</span><span class='style2'>ಸ್ಥಃ॑¦</span><span class='style1'>ಶ್ರು॒ತಂ</span><span class='style2'>ಮೇ॒</span><span class='style1'>ಮಾ</span><span class='style2'>ಪ್ರ</span><span class='style1'>ಹಾ᳚ಸೀಃ</span> ||5|| 
 </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಮೇ॒ಧಾಂ</span><span class='style2'>ದೇ॒ವೀಂ</span><span class='style1'>ಮನ॑ಸಾ॒</span><span class='style2'>ರೇಜ॑ಮಾನಾಂ</span><span class='style1'>ಗಂಧ॒ರ್‍ವಜು॑ಷ್ಟಾಂ॒</span><span class='style2'>ಪ್ರತಿ॑</span><span class='style1'>ನೋ</span><span class='style2'>ಜುಷಸ್ವ</span> |<p><span class='style1'>ಮಹ್ಯಂ॒</span><span class='style2'>ಮೇಧಾಂ᳚</span><span class='style1'>ವದ॒</span><span class='style2'>ಮಹ್ಯಂ॒</span><span class='style1'>ಶ್ರಿಯಂ᳚</span><span class='style2'>ವದ</span><span class='style1'>ಮೇಧಾ॒ವೀ</span><span class='style2'>ಭೂ᳚ಯಾಸಮ॒ಜರಾ᳚ಜರಿ॒ಷ್ಣು</span> ||6|| 
+<span class='style1'>ಮೇ॒ಧಾಂ</span><span class='style2'>ದೇ॒ವೀಂ</span><span class='style1'>ಮನ॑ಸಾ॒</span><span class='style2'>ರೇಜ॑ಮಾನಾಂ¦</span><span class='style1'>ಗಂಧ॒ರ್‍ವಜು॑ಷ್ಟಾಂ॒</span><span class='style2'>ಪ್ರತಿ॑</span><span class='style1'>ನೋ</span><span class='style2'>ಜುಷಸ್ವ</span> |<p><span class='style1'>ಮಹ್ಯಂ॒</span><span class='style2'>ಮೇಧಾಂ᳚</span><span class='style1'>ವದ॒</span><span class='style2'>ಮಹ್ಯಂ॒</span><span class='style1'>ಶ್ರಿಯಂ᳚</span><span class='style2'>ವದ¦</span><span class='style1'>ಮೇಧಾ॒ವೀ</span><span class='style2'>ಭೂ᳚ಯಾಸಮ॒ಜರಾ᳚ಜರಿ॒ಷ್ಣು</span> ||6|| 
 </td>
 </tr>
 <tr>
@@ -890,7 +890,7 @@
 </tr>
 <tr>
 <td class='VargaStyle1'>
-<span class='style1'>ಮೇ॒ಧಾವ್ಯ೧॑(ಅ॒)ಹಂ</span><span class='style2'>ಸು॒ಮನಾಃ᳚</span><span class='style1'>ಸು॒ಪ್ರತೀ᳚ಕಃ¦</span><span class='style2'>ಶ್ರ॒ದ್ಧಾಮ॑ನಾಃ</span><span class='style1'>ಸ॒ತ್ಯಮ॑ತಿಃ</span><span class='style2'>ಸು॒ಶೇವಃ॑</span> |<p><span class='style1'>ಮ॒ಹಾ॒ಯ॒ಶಾ</span><span class='style2'>ಧಾ॒ರಯಿಷ್ಣುಃ॑</span><span class='style1'>ಪ್ರವ॒ಕ್ತಾ¦</span><span class='style2'>ಭೂ॒ಯಾಸ॑ಮಸ್ಮೈ</span><span class='style1'>ಶ॒ರಯಾ᳚</span><span class='style2'>ಪ್ರಯೋ॒ಗೇ</span> ||9|| 
+<span class='style1'>ಮೇಧಾ॒ವ್ಯ೧॑(ಅ॒)ಹಂ</span><span class='style2'>ಸು॒ಮನಾಃ᳚</span><span class='style1'>ಸು॒ಪ್ರತೀ᳚ಕಃ¦</span><span class='style2'>ಶ್ರ॒ದ್ಧಾಮ॑ನಾಃ</span><span class='style1'>ಸ॒ತ್ಯಮ॑ತಿಃ</span><span class='style2'>ಸು॒ಶೇವಃ॑</span> |<p><span class='style1'>ಮ॒ಹಾ॒ಯ॒ಶಾ</span><span class='style2'>ಧಾ॒ರಯಿಷ್ಣುಃ॑</span><span class='style1'>ಪ್ರವ॒ಕ್ತಾ¦</span><span class='style2'>ಭೂ॒ಯಾಸ॑ಮಸ್ಮೈ</span><span class='style1'>ಶ॒ರಯಾ᳚</span><span class='style2'>ಪ್ರಯೋ॒ಗೇ</span> ||9|| 
 </td>
 </tr>
 <tr>
