--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
@@ -3153,7 +3153,7 @@
 <td class='VargaStyle1'>आ गावो᳚, अग्मन्नु॒त भ॒द्रम॑क्र॒न् त्सीद᳚न्तु गो॒ष्ठे र॒णय᳚न्त्व॒स्मे |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | गावः | त्रिष्टुप्}</span><p>प्र॒जाव॑तीः पुरु॒रूपा᳚, इ॒ह स्यु॒रिन्द्रा᳚य पू॒र्वीरु॒षसो॒ दुहा᳚नाः ||<span class='MantraNumbering'>{1/8}{4.6.25.1}{6.28.1}{6.3.5.1}{469, 4666}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>इन्द्रो॒ यज्व॑ने पृण॒ते च॑ शिक्ष॒त्युपेद्द॑दाति॒ न स्वं मु॑षायति |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | गाव इन्द्रो वा | जगती}</span><p>भूयो᳚भूयो र॒यिमिद॑स्य व॒र्धय॒न्नभि᳚न्ने खि॒ल्ये नि द॑धाति देव॒युम् ||<span class='MantraNumbering'>{2/8}{4.6.25.2}{6.28.2}{6.3.5.2}{469, 4667}</span></td>
+<td class='VargaStyle1'>इन्द्रो॒ यज्व॑ने पृण॒ते च॑ शिक्ष॒त्युपेद्‌ द॑दाति॒ न स्वं मु॑षायति |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | गाव इन्द्रो वा | जगती}</span><p>भूयो᳚भूयो र॒यिमिद॑स्य व॒र्धय॒न्नभि᳚न्ने खि॒ल्ये नि द॑धाति देव॒युम् ||<span class='MantraNumbering'>{2/8}{4.6.25.2}{6.28.2}{6.3.5.2}{469, 4667}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>न ता न॑शन्ति॒ न द॑भाति॒ तस्क॑रो॒ नासा᳚मामि॒त्रो व्यथि॒रा द॑धर्षति |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | गावः | जगती}</span><p>दे॒वाँश्च॒ याभि॒र्यज॑ते॒ ददा᳚ति च॒ ज्योगित्ताभिः॑ सचते॒ गोप॑तिः स॒ह ||<span class='MantraNumbering'>{3/8}{4.6.25.3}{6.28.3}{6.3.5.3}{469, 4668}</span></td>
