--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format4/RVS-Devanagari-F4-M06.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format4/RVS-Devanagari-F4-M06.html
@@ -1020,7 +1020,7 @@
 <td class='VargaStyle1'>आगावो᳚,अग्मन्नु॒तभ॒द्रम॑क्र॒न्त्सीद᳚न्तुगो॒ष्ठेर॒णय᳚न्त्व॒स्मे |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | गावः | त्रिष्टुप्}</span><p>प्र॒जाव॑तीःपुरु॒रूपा᳚,इ॒हस्यु॒रिन्द्रा᳚यपू॒र्वीरु॒षसो॒दुहा᳚नाः॒(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:25</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>इन्द्रो॒यज्व॑नेपृण॒तेच॑शिक्ष॒त्युपेद्द॑दाति॒नस्वंमु॑षायति |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | गाव इन्द्रो वा | जगती}</span><p>भूयो᳚भूयोर॒यिमिद॑स्यव॒र्धय॒न्नभि᳚न्नेखि॒ल्येनिद॑धातिदेव॒युम्(स्वाहा᳚) || 2 || </td>
+<td class='VargaStyle1'>इन्द्रो॒यज्व॑नेपृण॒तेच॑शिक्ष॒त्युपेद्‌द॑दाति॒नस्वंमु॑षायति |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | गाव इन्द्रो वा | जगती}</span><p>भूयो᳚भूयोर॒यिमिद॑स्यव॒र्धय॒न्नभि᳚न्नेखि॒ल्येनिद॑धातिदेव॒युम्(स्वाहा᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>नतान॑शन्ति॒नद॑भाति॒तस्क॑रो॒नासा᳚मामि॒त्रोव्यथि॒राद॑धर्षति |<span class='RishiDevChandas'>{बार्हस्पत्यो भरद्वाजः | गावः | जगती}</span><p>दे॒वाँश्च॒याभि॒र्यज॑ते॒ददा᳚तिच॒ज्योगित्ताभिः॑सचते॒गोप॑तिःस॒ह(स्वाहा᳚) || 3 || </td>
